@@ -25,7 +25,6 @@ import static org.apache.ignite.internal.processors.query.calcite.util.Commons.F
 import static org.apache.ignite.internal.util.CollectionUtils.first;
 import static org.apache.ignite.internal.util.CollectionUtils.nullOrEmpty;
 
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
@@ -51,6 +50,7 @@ import org.apache.calcite.sql.parser.SqlParseException;
 import org.apache.calcite.sql.type.SqlTypeName;
 import org.apache.calcite.tools.Frameworks;
 import org.apache.calcite.tools.ValidationException;
+import org.apache.ignite.internal.processors.query.calcite.ResultSetMetadata;
 import org.apache.ignite.internal.processors.query.calcite.SqlCursor;
 import org.apache.ignite.internal.processors.query.calcite.exec.rel.Inbox;
 import org.apache.ignite.internal.processors.query.calcite.exec.rel.Node;
@@ -71,8 +71,6 @@ import org.apache.ignite.internal.processors.query.calcite.metadata.RemoteExcept
 import org.apache.ignite.internal.processors.query.calcite.prepare.CacheKey;
 import org.apache.ignite.internal.processors.query.calcite.prepare.DdlPlan;
 import org.apache.ignite.internal.processors.query.calcite.prepare.ExplainPlan;
-import org.apache.ignite.internal.processors.query.calcite.prepare.FieldsMetadata;
-import org.apache.ignite.internal.processors.query.calcite.prepare.FieldsMetadataImpl;
 import org.apache.ignite.internal.processors.query.calcite.prepare.Fragment;
 import org.apache.ignite.internal.processors.query.calcite.prepare.FragmentPlan;
 import org.apache.ignite.internal.processors.query.calcite.prepare.IgnitePlanner;
@@ -83,6 +81,8 @@ import org.apache.ignite.internal.processors.query.calcite.prepare.PlanningConte
 import org.apache.ignite.internal.processors.query.calcite.prepare.QueryPlan;
 import org.apache.ignite.internal.processors.query.calcite.prepare.QueryPlanCache;
 import org.apache.ignite.internal.processors.query.calcite.prepare.QueryTemplate;
+import org.apache.ignite.internal.processors.query.calcite.prepare.ResultSetMetadataImpl;
+import org.apache.ignite.internal.processors.query.calcite.prepare.ResultSetMetadataInternal;
 import org.apache.ignite.internal.processors.query.calcite.prepare.Splitter;
 import org.apache.ignite.internal.processors.query.calcite.prepare.ValidationResult;
 import org.apache.ignite.internal.processors.query.calcite.prepare.ddl.DdlSqlToCommandConverter;
@@ -108,49 +108,83 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 /**
- * Implementation of ExecutionService.
+ *
  */
 public class ExecutionServiceImpl<RowT> implements ExecutionService {
     private static final IgniteLogger LOG = IgniteLogger.forClass(ExecutionServiceImpl.class);
-
+    
     private static final SqlQueryMessagesFactory FACTORY = new SqlQueryMessagesFactory();
-
-    private final MessageService msgSrvc;
-
-    private final String locNodeId;
-
-    private final QueryPlanCache qryPlanCache;
-
-    private final SchemaHolder schemaHolder;
-
-    private final QueryTaskExecutor taskExecutor;
-
-    private final AffinityService affSrvc;
-
-    private final MailboxRegistry mailboxRegistry;
-
-    private final MappingService mappingSrvc;
-
-    private final ExchangeService exchangeSrvc;
-
-    private final ClosableIteratorsHolder iteratorsHolder;
-
-    private final Map<UUID, QueryInfo> running;
-
-    private final RowHandler<RowT> handler;
-
-    private final DdlSqlToCommandConverter ddlConverter;
-
+    
     /**
-     * Constructor.
      *
-     * @param topSrvc Topology service.
-     * @param msgSrvc Message service.
-     * @param planCache Query plan cache.
-     * @param schemaHolder Schema holder.
-     * @param taskExecutor Query task executor.
-     * @param handler Row handler.
      */
+    private final TopologyService topSrvc;
+    
+    /**
+     *
+     */
+    private final MessageService msgSrvc;
+    
+    /**
+     *
+     */
+    private final String locNodeId;
+    
+    /**
+     *
+     */
+    private final QueryPlanCache qryPlanCache;
+    
+    /**
+     *
+     */
+    private final SchemaHolder schemaHolder;
+    
+    /**
+     *
+     */
+    private final QueryTaskExecutor taskExecutor;
+    
+    /**
+     *
+     */
+    private final AffinityService affSrvc;
+    
+    /**
+     *
+     */
+    private final MailboxRegistry mailboxRegistry;
+    
+    /**
+     *
+     */
+    private final MappingService mappingSrvc;
+    
+    /**
+     *
+     */
+    private final ExchangeService exchangeSrvc;
+    
+    /**
+     *
+     */
+    private final ClosableIteratorsHolder iteratorsHolder;
+    
+    /**
+     *
+     */
+    private final Map<UUID, QueryInfo> running;
+    
+    /**
+     *
+     */
+    private final RowHandler<RowT> handler;
+    
+    /**
+     *
+     */
+    private final DdlSqlToCommandConverter ddlConverter;
+    
     public ExecutionServiceImpl(
             TopologyService topSrvc,
             MessageService msgSrvc,
@@ -159,35 +193,38 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
             QueryTaskExecutor taskExecutor,
             RowHandler<RowT> handler
     ) {
+        this.topSrvc = topSrvc;
         this.handler = handler;
         this.msgSrvc = msgSrvc;
         this.schemaHolder = schemaHolder;
         this.taskExecutor = taskExecutor;
-
+        
         locNodeId = topSrvc.localMember().id();
         qryPlanCache = planCache;
         running = new ConcurrentHashMap<>();
         ddlConverter = new DdlSqlToCommandConverter();
-        iteratorsHolder = new ClosableIteratorsHolder(LOG);
+        iteratorsHolder = new ClosableIteratorsHolder(topSrvc.localMember().name(), LOG);
         mailboxRegistry = new MailboxRegistryImpl(topSrvc);
         exchangeSrvc = new ExchangeServiceImpl(taskExecutor, mailboxRegistry, msgSrvc);
         mappingSrvc = new MappingServiceImpl(topSrvc);
         // TODO: fix this
         affSrvc = cacheId -> Objects::hashCode;
-
-        topSrvc.addEventHandler(new NodeLeaveHandler(this::onNodeLeft));
-
-        init();
     }
-
-    private void init() {
+    
+    /** {@inheritDoc} */
+    @Override
+    public void start() {
+        iteratorsHolder.start();
+        mailboxRegistry.start();
+        exchangeSrvc.start();
+        
+        topSrvc.addEventHandler(new NodeLeaveHandler(this::onNodeLeft));
+        
         msgSrvc.register((n, m) -> onMessage(n, (QueryStartRequest) m), SqlQueryMessageGroup.QUERY_START_REQUEST);
         msgSrvc.register((n, m) -> onMessage(n, (QueryStartResponse) m), SqlQueryMessageGroup.QUERY_START_RESPONSE);
         msgSrvc.register((n, m) -> onMessage(n, (ErrorMessage) m), SqlQueryMessageGroup.ERROR_MESSAGE);
-
-        iteratorsHolder.init();
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public List<SqlCursor<List<?>>> executeQuery(
@@ -196,38 +233,41 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
             Object[] params
     ) {
         PlanningContext pctx = createContext(topologyVersion(), locNodeId, schema, qry, params);
-
+        
         List<QueryPlan> qryPlans = qryPlanCache.queryPlan(pctx, new CacheKey(pctx.schemaName(), pctx.query()), this::prepareQuery);
-
+        
         return executePlans(qryPlans, pctx);
     }
-
+    
+    /**
+     *
+     */
     private SqlCursor<List<?>> executeQuery(UUID qryId, MultiStepPlan plan, PlanningContext pctx) {
         plan.init(pctx);
-
+        
         List<Fragment> fragments = plan.fragments();
-
+        
         // Local execution
         Fragment fragment = first(fragments);
-
+        
         if (IgniteUtils.assertionsEnabled()) {
             assert fragment != null;
-
+            
             FragmentMapping mapping = plan.mapping(fragment);
-
+            
             assert mapping != null;
-
+            
             List<String> nodes = mapping.nodeIds();
-
+            
             assert nodes != null && nodes.size() == 1 && first(nodes).equals(pctx.localNodeId());
         }
-
+        
         FragmentDescription fragmentDesc = new FragmentDescription(
                 fragment.fragmentId(),
                 plan.mapping(fragment),
                 plan.target(fragment),
                 plan.remotes(fragment));
-
+        
         ExecutionContext<RowT> ectx = new ExecutionContext<>(
                 taskExecutor,
                 pctx,
@@ -235,15 +275,15 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                 fragmentDesc,
                 handler,
                 Commons.parametersMap(pctx.parameters()));
-
+        
         Node<RowT> node = new LogicalRelImplementor<>(ectx, affSrvc, mailboxRegistry,
                 exchangeSrvc).go(fragment.root());
-
+        
         QueryInfo info = new QueryInfo(ectx, plan, node);
-
+        
         // register query
         register(info);
-
+        
         // start remote execution
         for (int i = 1; i < fragments.size(); i++) {
             fragment = fragments.get(i);
@@ -252,7 +292,7 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                     plan.mapping(fragment),
                     plan.target(fragment),
                     plan.remotes(fragment));
-
+            
             Throwable ex = null;
             for (String nodeId : fragmentDesc.nodeIds()) {
                 if (ex != null) {
@@ -268,7 +308,7 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                                 .fragmentDescription(fragmentDesc)
                                 .parameters(pctx.parameters())
                                 .build();
-
+                        
                         msgSrvc.send(nodeId, req);
                     } catch (Throwable e) {
                         info.onResponse(nodeId, fragment.fragmentId(), ex = e);
@@ -276,20 +316,20 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                 }
             }
         }
-
+        
         return Commons.createCursor(new TransformingIterator<>(info.iterator(), row -> {
             int rowSize = ectx.rowHandler().columnCount(row);
-
+            
             List<Object> res = new ArrayList<>(rowSize);
-
+            
             for (int i = 0; i < rowSize; i++) {
                 res.add(ectx.rowHandler().get(i, row));
             }
-
+            
             return res;
         }), plan);
     }
-
+    
     /**
      * Executes prepared plans.
      *
@@ -303,32 +343,38 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
             PlanningContext pctx
     ) {
         List<SqlCursor<List<?>>> cursors = new ArrayList<>(qryPlans.size());
-
+        
         for (QueryPlan plan : qryPlans) {
             UUID qryId = UUID.randomUUID();
-
+            
             SqlCursor<List<?>> cur = executePlan(qryId, pctx, plan);
-
+            
             cursors.add(cur);
         }
-
+        
         return cursors;
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public void cancelQuery(UUID qryId) {
         QueryInfo info = running.get(qryId);
-
+    
         if (info != null) {
             info.cancel();
         }
     }
-
+    
+    /**
+     *
+     */
     protected long topologyVersion() {
         return 1L;
     }
-
+    
+    /**
+     *
+     */
     private PlanningContext createContext(long topVer, String originator,
             @Nullable String schema, String qry, Object[] params) {
         RelTraitDef<?>[] traitDefs = {
@@ -338,7 +384,7 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE,
         };
-
+        
         return PlanningContext.builder()
                 .localNodeId(locNodeId)
                 .originatingNodeId(originator)
@@ -354,27 +400,30 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                 .topologyVersion(topVer)
                 .build();
     }
-
+    
+    /**
+     *
+     */
     private List<QueryPlan> prepareQuery(PlanningContext ctx) {
         try {
             String qry = ctx.query();
-
+            
             assert qry != null;
-
+            
             // Parse query.
             SqlNode sqlNode = ctx.planner().parse(qry);
-
+    
             if (single(sqlNode)) {
                 return singletonList(prepareSingle(sqlNode, ctx));
             }
-
+            
             List<SqlNode> nodes = ((SqlNodeList) sqlNode).getList();
             List<QueryPlan> res = new ArrayList<>(nodes.size());
-
+    
             for (SqlNode node : nodes) {
                 res.add(prepareSingle(node, ctx));
             }
-
+            
             return res;
         } catch (SqlParseException e) {
             throw new IgniteInternalException("Failed to parse query", e);
@@ -384,34 +433,43 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
             throw new IgniteInternalException("Failed to plan query.", e);
         }
     }
-
+    
+    /**
+     *
+     */
     private QueryPlan prepareQuery(SqlNode sqlNode, PlanningContext ctx) {
         IgnitePlanner planner = ctx.planner();
-
+        
         // Validate
         ValidationResult validated = planner.validateAndGetTypeMetadata(sqlNode);
-
+        
         sqlNode = validated.sqlNode();
-
+        
         IgniteRel igniteRel = optimize(sqlNode, planner, LOG);
-
+        
         // Split query plan to query fragments.
         List<Fragment> fragments = new Splitter().go(igniteRel);
-
+        
         QueryTemplate template = new QueryTemplate(mappingSrvc, fragments);
-
-        return new MultiStepQueryPlan(template, queryFieldsMetadata(ctx, validated.dataType(), validated.origins()));
+        
+        return new MultiStepQueryPlan(template, resultSetMetadata(ctx, validated.dataType(), validated.origins()));
     }
-
+    
+    /**
+     *
+     */
     private List<QueryPlan> prepareFragment(PlanningContext ctx) {
-        return ImmutableList.of(new FragmentPlan(fromJson(ctx, ctx.query())));
+        return List.of(new FragmentPlan(fromJson(ctx, ctx.query())));
     }
-
+    
+    /**
+     *
+     */
     private QueryPlan prepareSingle(SqlNode sqlNode, PlanningContext ctx) throws ValidationException {
         assert single(sqlNode);
-
+        
         ctx.planner().reset();
-
+        
         switch (sqlNode.getKind()) {
             case SELECT:
             case ORDER_BY:
@@ -421,77 +479,92 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
             case EXCEPT:
             case INTERSECT:
                 return prepareQuery(sqlNode, ctx);
-
+            
             case INSERT:
             case DELETE:
             case UPDATE:
                 return prepareDml(sqlNode, ctx);
-
+            
             case EXPLAIN:
                 return prepareExplain(sqlNode, ctx);
-
+            
             case CREATE_TABLE:
             case DROP_TABLE:
                 return prepareDdl(sqlNode, ctx);
-
+            
             default:
                 throw new IgniteInternalException("Unsupported operation ["
                         + "sqlNodeKind=" + sqlNode.getKind() + "; "
                         + "querySql=\"" + ctx.query() + "\"]");
         }
     }
-
+    
+    /**
+     *
+     */
     private QueryPlan prepareDml(SqlNode sqlNode, PlanningContext ctx) throws ValidationException {
         IgnitePlanner planner = ctx.planner();
-
+        
         // Validate
         sqlNode = planner.validate(sqlNode);
-
+        
         // Convert to Relational operators graph
         IgniteRel igniteRel = optimize(sqlNode, planner, LOG);
-
+        
         // Split query plan to query fragments.
         List<Fragment> fragments = new Splitter().go(igniteRel);
-
+        
         QueryTemplate template = new QueryTemplate(mappingSrvc, fragments);
-
-        return new MultiStepDmlPlan(template, queryFieldsMetadata(ctx, igniteRel.getRowType(), null));
+        
+        return new MultiStepDmlPlan(template, resultSetMetadata(ctx, igniteRel.getRowType(), null));
     }
-
+    
+    /**
+     *
+     */
     private QueryPlan prepareDdl(SqlNode sqlNode, PlanningContext ctx) {
         assert sqlNode instanceof SqlDdl : sqlNode == null ? "null" : sqlNode.getClass().getName();
-
+        
         SqlDdl ddlNode = (SqlDdl) sqlNode;
-
+        
         return new DdlPlan(ddlConverter.convert(ddlNode, ctx));
     }
-
+    
+    /**
+     *
+     */
     private QueryPlan prepareExplain(SqlNode explain, PlanningContext ctx) throws ValidationException {
         IgnitePlanner planner = ctx.planner();
-
+        
         SqlNode sql = ((SqlExplain) explain).getExplicandum();
-
+        
         // Validate
         sql = planner.validate(sql);
-
+        
         // Convert to Relational operators graph
         IgniteRel igniteRel = optimize(sql, planner, LOG);
-
+        
         String plan = RelOptUtil.toString(igniteRel, SqlExplainLevel.ALL_ATTRIBUTES);
-
+        
         return new ExplainPlan(plan, explainFieldsMetadata(ctx));
     }
-
-    private FieldsMetadata explainFieldsMetadata(PlanningContext ctx) {
+    
+    /**
+     *
+     */
+    private ResultSetMetadata explainFieldsMetadata(PlanningContext ctx) {
         IgniteTypeFactory factory = ctx.typeFactory();
         RelDataType planStrDataType =
                 factory.createSqlType(SqlTypeName.VARCHAR, PRECISION_NOT_SPECIFIED);
         Map.Entry<String, RelDataType> planField = new IgniteBiTuple<>(ExplainPlan.PLAN_COL_NAME, planStrDataType);
         RelDataType planDataType = factory.createStructType(singletonList(planField));
-
-        return queryFieldsMetadata(ctx, planDataType, null);
+        
+        return resultSetMetadata(ctx, planDataType, null);
     }
-
+    
+    /**
+     *
+     */
     private SqlCursor<List<?>> executePlan(UUID qryId, PlanningContext pctx, QueryPlan plan) {
         switch (plan.type()) {
             case DML:
@@ -502,38 +575,47 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                 return executeExplain((ExplainPlan) plan);
             case DDL:
                 return executeDdl((DdlPlan) plan, pctx);
-
+            
             default:
                 throw new AssertionError("Unexpected plan type: " + plan);
         }
     }
-
+    
+    /**
+     *
+     */
     private SqlCursor<List<?>> executeDdl(DdlPlan plan, PlanningContext pctx) {
         throw new UnsupportedOperationException("plan=" + plan + ", ctx=" + pctx);
     }
-
+    
+    /**
+     *
+     */
     private SqlCursor<List<?>> executeExplain(ExplainPlan plan) {
         SqlCursor<List<?>> cur = Commons.createCursor(singletonList(singletonList(plan.plan())), plan);
         // TODO: fix this
         //        cur.fieldsMeta(plan.fieldsMeta().queryFieldsMetadata(pctx.typeFactory()));
-
+        
         return cur;
     }
-
+    
+    /**
+     *
+     */
     private void executeFragment(UUID qryId, FragmentPlan plan, PlanningContext pctx, FragmentDescription fragmentDesc) {
         ExecutionContext<RowT> ectx = new ExecutionContext<>(taskExecutor, pctx, qryId,
                 fragmentDesc, handler, Commons.parametersMap(pctx.parameters()));
-
+        
         long frId = fragmentDesc.fragmentId();
         String origNodeId = pctx.originatingNodeId();
-
+        
         Outbox<RowT> node = new LogicalRelImplementor<>(
                 ectx,
                 affSrvc,
                 mailboxRegistry,
                 exchangeSrvc
         ).go(plan.root());
-
+        
         try {
             msgSrvc.send(
                     origNodeId,
@@ -544,56 +626,69 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
             );
         } catch (IgniteInternalCheckedException e) {
             IgniteInternalException wrpEx = new IgniteInternalException("Failed to send reply. [nodeId=" + origNodeId + ']', e);
-
+            
             throw wrpEx;
         }
-
+        
         node.init();
     }
-
+    
+    /**
+     *
+     */
     private void register(QueryInfo info) {
         UUID qryId = info.ctx.queryId();
-
+        
         running.put(qryId, info);
     }
-
-    private FieldsMetadata queryFieldsMetadata(PlanningContext ctx, RelDataType sqlType,
+    
+    /**
+     *
+     */
+    private ResultSetMetadataInternal resultSetMetadata(PlanningContext ctx, RelDataType sqlType,
             @Nullable List<List<String>> origins) {
-        RelDataType resultType = TypeUtils.getResultType(
-                ctx.typeFactory(), ctx.catalogReader(), sqlType, origins);
-        return new FieldsMetadataImpl(resultType, origins);
+        return new ResultSetMetadataImpl(
+                TypeUtils.getResultType(ctx.typeFactory(), ctx.catalogReader(), sqlType, origins),
+                origins
+        );
     }
-
+    
+    /**
+     *
+     */
     private boolean single(SqlNode sqlNode) {
         return !(sqlNode instanceof SqlNodeList);
     }
-
+    
+    /**
+     *
+     */
     private void onMessage(String nodeId, QueryStartRequest msg) {
         assert nodeId != null && msg != null;
-
+        
         try {
             PlanningContext pctx = createContext(msg.topologyVersion(), nodeId, msg.schema(),
                     msg.root(), msg.parameters());
-
+            
             List<QueryPlan> qryPlans = qryPlanCache.queryPlan(
                     pctx,
                     new CacheKey(pctx.schemaName(), pctx.query()),
                     this::prepareFragment
             );
-
+            
             assert qryPlans.size() == 1 && qryPlans.get(0).type() == QueryPlan.Type.FRAGMENT;
-
+            
             FragmentPlan plan = (FragmentPlan) qryPlans.get(0);
-
+            
             executeFragment(msg.queryId(), plan, pctx, msg.fragmentDescription());
         } catch (Throwable ex) {
             LOG.error("Failed to start query fragment", ex);
-
+            
             mailboxRegistry.outboxes(msg.queryId(), msg.fragmentId(), -1)
                     .forEach(Outbox::close);
             mailboxRegistry.inboxes(msg.queryId(), msg.fragmentId(), -1)
                     .forEach(Inbox::close);
-
+            
             try {
                 msgSrvc.send(
                         nodeId,
@@ -605,60 +700,100 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                 );
             } catch (Exception e) {
                 LOG.error("Error occurred during send error message", e);
-
+                
                 IgniteInternalException wrpEx = new IgniteInternalException("Error occurred during send error message", e);
-
+                
                 e.addSuppressed(ex);
-
+                
                 throw wrpEx;
             }
-
+            
             throw ex;
         }
     }
-
+    
+    /**
+     *
+     */
     private void onMessage(String nodeId, QueryStartResponse msg) {
         assert nodeId != null && msg != null;
-
+        
         QueryInfo info = running.get(msg.queryId());
-
+    
         if (info != null) {
             info.onResponse(nodeId, msg.fragmentId(), msg.error());
         }
     }
-
+    
+    /**
+     *
+     */
     private void onMessage(String nodeId, ErrorMessage msg) {
         assert nodeId != null && msg != null;
-
+        
         QueryInfo info = running.get(msg.queryId());
-
+    
         if (info != null) {
             info.onError(new RemoteException(nodeId, msg.queryId(), msg.fragmentId(), msg.error()));
         }
     }
-
+    
+    /**
+     *
+     */
     private void onNodeLeft(ClusterNode node) {
         running.forEach((uuid, queryInfo) -> queryInfo.onNodeLeft(node.id()));
     }
-
+    
+    
+    /** {@inheritDoc} */
+    @Override
+    public void stop() throws Exception {
+        IgniteUtils.closeAll(qryPlanCache::stop, iteratorsHolder::stop, mailboxRegistry::stop, exchangeSrvc::stop);
+    }
+    
+    /**
+     *
+     */
     private enum QueryState {
+        /**
+         *
+         */
         RUNNING,
-
+        
+        /**
+         *
+         */
         CLOSING,
-
+        
+        /**
+         *
+         */
         CLOSED
     }
-
+    
+    /**
+     *
+     */
     private static final class RemoteFragmentKey {
+        /**
+         *
+         */
         private final String nodeId;
-
+        
+        /**
+         *
+         */
         private final long fragmentId;
-
+        
+        /**
+         *
+         */
         private RemoteFragmentKey(String nodeId, long fragmentId) {
             this.nodeId = nodeId;
             this.fragmentId = fragmentId;
         }
-
+        
         /** {@inheritDoc} */
         @Override
         public boolean equals(Object o) {
@@ -668,15 +803,15 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
             if (o == null || getClass() != o.getClass()) {
                 return false;
             }
-
+            
             RemoteFragmentKey that = (RemoteFragmentKey) o;
-
+    
             if (fragmentId != that.fragmentId) {
                 return false;
             }
             return nodeId.equals(that.nodeId);
         }
-
+        
         /** {@inheritDoc} */
         @Override
         public int hashCode() {
@@ -685,84 +820,102 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
             return res;
         }
     }
-
+    
+    /**
+     *
+     */
     private final class QueryInfo implements Cancellable {
+        /**
+         *
+         */
         private final ExecutionContext<RowT> ctx;
-
+        
+        /**
+         *
+         */
         private final RootNode<RowT> root;
-
-        /** Remote nodes. */
+        
+        /** remote nodes */
         private final Set<String> remotes;
-
-        /** Node to fragment. */
+        
+        /** node to fragment */
         private final Set<RemoteFragmentKey> waiting;
-
+        
+        /**
+         *
+         */
         private volatile QueryState state;
-
+        
+        /**
+         *
+         */
         private QueryInfo(ExecutionContext<RowT> ctx, MultiStepPlan plan, Node<RowT> root) {
             this.ctx = ctx;
-
-            RootNode<RowT> rootNode = new RootNode<>(ctx, plan.fieldsMetadata().rowType(), this::tryClose);
+            
+            RootNode<RowT> rootNode = new RootNode<>(ctx, plan.metadata().rowType(), this::tryClose);
             rootNode.register(root);
-
+            
             this.root = rootNode;
-
+            
             remotes = new HashSet<>();
             waiting = new HashSet<>();
-
+            
             for (int i = 1; i < plan.fragments().size(); i++) {
                 Fragment fragment = plan.fragments().get(i);
                 List<String> nodes = plan.mapping(fragment).nodeIds();
-
+                
                 remotes.addAll(nodes);
-
+    
                 for (String node : nodes) {
                     waiting.add(new RemoteFragmentKey(node, fragment.fragmentId()));
                 }
             }
-
+            
             state = QueryState.RUNNING;
         }
-
+        
+        /**
+         *
+         */
         public Iterator<RowT> iterator() {
             return iteratorsHolder.iterator(root);
         }
-
+        
         /** {@inheritDoc} */
         @Override
         public void cancel() {
             root.close();
         }
-
+        
         /**
          * Can be called multiple times after receive each error at {@link #onResponse(RemoteFragmentKey, Throwable)}.
          */
         private void tryClose() {
             QueryState state0 = null;
-
+            
             synchronized (this) {
                 if (state == QueryState.CLOSED) {
                     return;
                 }
-
+    
                 if (state == QueryState.RUNNING) {
                     state0 = state = QueryState.CLOSING;
                 }
-
+                
                 // 1) close local fragment
                 root.closeInternal();
-
+    
                 if (state == QueryState.CLOSING && waiting.isEmpty()) {
                     state0 = state = QueryState.CLOSED;
                 }
             }
-
+            
             if (state0 == QueryState.CLOSED) {
-                // 2) unregister runing query
+                // 2) unregister running query
                 running.remove(ctx.queryId());
-
+                
                 IgniteInternalException wrpEx = null;
-
+                
                 // 3) close remote fragments
                 for (String nodeId : remotes) {
                     try {
@@ -775,64 +928,76 @@ public class ExecutionServiceImpl<RowT> implements ExecutionService {
                         }
                     }
                 }
-
+                
                 // 4) Cancel local fragment
                 root.context().execute(ctx::cancel, root::onError);
-
+    
                 if (wrpEx != null) {
                     throw wrpEx;
                 }
             }
         }
-
+        
+        /**
+         *
+         */
         private void onNodeLeft(String nodeId) {
             List<RemoteFragmentKey> fragments = null;
-
+            
             synchronized (this) {
                 for (RemoteFragmentKey fragment : waiting) {
                     if (!fragment.nodeId.equals(nodeId)) {
                         continue;
                     }
-
+    
                     if (fragments == null) {
                         fragments = new ArrayList<>();
                     }
-
+                    
                     fragments.add(fragment);
                 }
             }
-
+            
             if (!nullOrEmpty(fragments)) {
                 IgniteInternalCheckedException ex = new IgniteInternalCheckedException(
                         "Failed to start query, node left. nodeId=" + nodeId);
-
+    
                 for (RemoteFragmentKey fragment : fragments) {
                     onResponse(fragment, ex);
                 }
             }
         }
-
+        
+        /**
+         *
+         */
         private void onResponse(String nodeId, long fragmentId, Throwable error) {
             onResponse(new RemoteFragmentKey(nodeId, fragmentId), error);
         }
-
+        
+        /**
+         *
+         */
         private void onResponse(RemoteFragmentKey fragment, Throwable error) {
             QueryState state;
             synchronized (this) {
                 waiting.remove(fragment);
                 state = this.state;
             }
-
+    
             if (error != null) {
                 onError(error);
             } else if (state == QueryState.CLOSING) {
                 tryClose();
             }
         }
-
+        
+        /**
+         *
+         */
         private void onError(Throwable error) {
             root.onError(error);
-
+            
             tryClose();
         }
     }
