@@ -17,9 +17,9 @@
 
 package org.apache.ignite.internal.processors.query.calcite.exec;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelCollations;
 import org.apache.calcite.rel.RelNode;
@@ -50,8 +50,7 @@ import org.apache.ignite.internal.processors.query.calcite.util.HintUtils;
 import org.apache.ignite.lang.IgniteLogger;
 
 /**
- * PlannerHelper.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 public class PlannerHelper {
     /**
@@ -62,9 +61,6 @@ public class PlannerHelper {
     }
 
     /**
-     * Optimize.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
-     *
      * @param sqlNode Sql node.
      * @param planner Planner.
      * @param log     Logger.
@@ -102,7 +98,7 @@ public class PlannerHelper {
                 igniteRel = new IgniteProject(igniteRel.getCluster(), desired, igniteRel, projects, root.validatedRowType);
             }
 
-            if (sqlNode.isA(ImmutableSet.of(SqlKind.INSERT, SqlKind.UPDATE, SqlKind.MERGE))) {
+            if (sqlNode.isA(Set.of(SqlKind.INSERT, SqlKind.UPDATE, SqlKind.MERGE))) {
                 igniteRel = new FixDependentModifyNodeShuttle().visit(igniteRel);
             }
 
@@ -218,7 +214,7 @@ public class PlannerHelper {
                 return (IgniteRel) scan;
             }
 
-            ImmutableSet<Integer> indexedCols = ImmutableSet.copyOf(
+            Set<Integer> indexedCols = Set.copyOf(
                     tbl.getIndex(((AbstractIndexScan) scan).indexName()).collation().getKeys());
 
             spoolNeeded = modifyNode.getUpdateColumnList().stream()
@@ -230,7 +226,7 @@ public class PlannerHelper {
         }
 
         /**
-         * Get insert data flag: {@code true} in case {@link #modifyNode} produces any insert.
+         * @return {@code true} in case {@link #modifyNode} produces any insert.
          */
         private boolean modifyNodeInsertsData() {
             return modifyNode.isInsert(); // MERGE should be analyzed too
