@@ -196,7 +196,6 @@ import static org.apache.calcite.sql.fun.SqlStdOperatorTable.USER;
 import static org.apache.ignite.internal.processors.query.calcite.sql.fun.IgniteSqlOperatorTable.LENGTH;
 import static org.apache.ignite.internal.processors.query.calcite.sql.fun.IgniteSqlOperatorTable.SYSTEM_RANGE;
 
-import com.google.common.collect.ImmutableList;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -258,20 +257,44 @@ import org.apache.ignite.internal.processors.query.calcite.util.IgniteMethod;
  * Contains implementations of Rex operators as Java code.
  */
 public class RexImpTable {
+    /**
+     *
+     */
     public static final RexImpTable INSTANCE = new RexImpTable();
 
+    /**
+     *
+     */
     public static final ConstantExpression NULL_EXPR = Expressions.constant(null);
 
+    /**
+     *
+     */
     public static final ConstantExpression FALSE_EXPR = Expressions.constant(false);
 
+    /**
+     *
+     */
     public static final ConstantExpression TRUE_EXPR = Expressions.constant(true);
 
+    /**
+     *
+     */
     public static final MemberExpression BOXED_FALSE_EXPR = Expressions.field(null, Boolean.class, "FALSE");
 
+    /**
+     *
+     */
     public static final MemberExpression BOXED_TRUE_EXPR = Expressions.field(null, Boolean.class, "TRUE");
 
+    /**
+     *
+     */
     private final Map<SqlOperator, RexCallImplementor> map = new HashMap<>();
 
+    /**
+     *
+     */
     RexImpTable() {
         defineMethod(ROW, BuiltInMethod.ARRAY.method, NullPolicy.NONE);
         defineMethod(UPPER, BuiltInMethod.UPPER.method, NullPolicy.STRICT);
@@ -547,6 +570,9 @@ public class RexImpTable {
         map.put(LOCALTIMESTAMP, systemFunctionImplementor);
     }
 
+    /**
+     *
+     */
     private <T> Supplier<T> constructorSupplier(Class<T> klass) {
         final Constructor<T> constructor;
         try {
@@ -566,19 +592,31 @@ public class RexImpTable {
         };
     }
 
+    /**
+     *
+     */
     private void defineMethod(SqlOperator operator, String functionName, NullPolicy nullPolicy) {
         map.put(operator, new MethodNameImplementor(functionName, nullPolicy, false));
     }
 
+    /**
+     *
+     */
     private void defineMethod(SqlOperator operator, Method method, NullPolicy nullPolicy) {
         map.put(operator, new MethodImplementor(method, nullPolicy, false));
     }
 
+    /**
+     *
+     */
     private void defineUnary(SqlOperator operator, ExpressionType expressionType,
             NullPolicy nullPolicy, String backupMethodName) {
         map.put(operator, new UnaryImplementor(expressionType, nullPolicy, backupMethodName));
     }
 
+    /**
+     *
+     */
     private void defineBinary(SqlOperator operator, ExpressionType expressionType,
             NullPolicy nullPolicy, String backupMethodName) {
         map.put(operator,
@@ -586,6 +624,9 @@ public class RexImpTable {
                         backupMethodName));
     }
 
+    /**
+     *
+     */
     private static RexCallImplementor wrapAsRexCallImplementor(
             final CallImplementor implementor) {
         return new AbstractRexCallImplementor(NullPolicy.NONE, false) {
@@ -603,8 +644,7 @@ public class RexImpTable {
     }
 
     /**
-     * Get RexCallImplementor.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
      */
     public RexCallImplementor get(final SqlOperator operator) {
         if (operator instanceof SqlUserDefinedFunction) {
@@ -623,10 +663,16 @@ public class RexImpTable {
         return map.get(operator);
     }
 
+    /**
+     *
+     */
     static Expression optimize(Expression expression) {
         return expression.accept(new OptimizeShuttle());
     }
 
+    /**
+     *
+     */
     static Expression optimize2(Expression operand, Expression expression) {
         if (Primitive.is(operand.getType())) {
             // Primitive values cannot be null
@@ -640,6 +686,9 @@ public class RexImpTable {
                         expression));
     }
 
+    /**
+     *
+     */
     private static RelDataType toSql(RelDataTypeFactory typeFactory,
             RelDataType type) {
         if (type instanceof RelDataTypeFactoryImpl.JavaType) {
@@ -653,6 +702,9 @@ public class RexImpTable {
         return type;
     }
 
+    /**
+     *
+     */
     private static <E> boolean allSame(List<E> list) {
         E prev = null;
         for (E e : list) {
@@ -730,7 +782,6 @@ public class RexImpTable {
                             // No-Op.
                     }
                     // fall through
-                    break;
                 default:
                     // No-Op.
             }
@@ -752,6 +803,9 @@ public class RexImpTable {
         }
     }
 
+    /**
+     *
+     */
     static Expression getDefaultValue(Type type) {
         if (Primitive.is(type)) {
             Primitive p = Primitive.of(type);
@@ -792,6 +846,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code TRIM} function. */
     private static class TrimImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         TrimImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -827,10 +884,19 @@ public class RexImpTable {
      * Implementor for the {@code MONTHNAME} and {@code DAYNAME} functions. Each takes a {@link java.util.Locale} argument.
      */
     private static class PeriodNameImplementor extends MethodNameImplementor {
+        /**
+         *
+         */
         private final BuiltInMethod timestampMethod;
 
+        /**
+         *
+         */
         private final BuiltInMethod dateMethod;
 
+        /**
+         *
+         */
         PeriodNameImplementor(String methodName, BuiltInMethod timestampMethod,
                 BuiltInMethod dateMethod) {
             super(methodName, NullPolicy.STRICT, false);
@@ -860,6 +926,9 @@ public class RexImpTable {
             }
         }
 
+        /**
+         *
+         */
         protected Expression getExpression(RexToLixTranslator translator,
                 Expression operand, BuiltInMethod builtInMethod) {
             final MethodCallExpression locale =
@@ -871,10 +940,19 @@ public class RexImpTable {
 
     /** Implementor for the {@code FLOOR} and {@code CEIL} functions. */
     private static class FloorImplementor extends MethodNameImplementor {
+        /**
+         *
+         */
         final Method timestampMethod;
 
+        /**
+         *
+         */
         final Method dateMethod;
 
+        /**
+         *
+         */
         FloorImplementor(String methodName, Method timestampMethod, Method dateMethod) {
             super(methodName, NullPolicy.STRICT, false);
             this.timestampMethod = timestampMethod;
@@ -947,6 +1025,9 @@ public class RexImpTable {
             }
         }
 
+        /**
+         *
+         */
         private Expression call(Expression operand, Type type,
                 TimeUnit timeUnit) {
             return Expressions.call(SqlFunctions.class, methodName,
@@ -958,8 +1039,14 @@ public class RexImpTable {
 
     /** Implementor for a function that generates calls to a given method. */
     private static class MethodImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         protected final Method method;
 
+        /**
+         *
+         */
         MethodImplementor(Method method, NullPolicy nullPolicy, boolean harmonize) {
             super(nullPolicy, harmonize);
             this.method = method;
@@ -995,6 +1082,9 @@ public class RexImpTable {
      * variable arguments function.
      */
     private static class JsonValueImplementor extends MethodImplementor {
+        /**
+         *
+         */
         JsonValueImplementor(Method method) {
             super(method, NullPolicy.ARG0, false);
         }
@@ -1061,8 +1151,14 @@ public class RexImpTable {
      * is overloaded; then you can use one implementor for several overloads.
      */
     private static class MethodNameImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         protected final String methodName;
 
+        /**
+         *
+         */
         MethodNameImplementor(String methodName,
                 NullPolicy nullPolicy, boolean harmonize) {
             super(nullPolicy, harmonize);
@@ -1093,7 +1189,7 @@ public class RexImpTable {
          * Types that can be arguments to comparison operators such as {@code <}.
          */
         private static final List<Primitive> COMP_OP_TYPES =
-                ImmutableList.of(
+                List.of(
                         Primitive.BYTE,
                         Primitive.CHAR,
                         Primitive.SHORT,
@@ -1102,24 +1198,42 @@ public class RexImpTable {
                         Primitive.FLOAT,
                         Primitive.DOUBLE);
 
+        /**
+         *
+         */
         private static final List<SqlBinaryOperator> COMPARISON_OPERATORS =
-                ImmutableList.of(
+                List.of(
                         SqlStdOperatorTable.LESS_THAN,
                         SqlStdOperatorTable.LESS_THAN_OR_EQUAL,
                         SqlStdOperatorTable.GREATER_THAN,
                         SqlStdOperatorTable.GREATER_THAN_OR_EQUAL);
 
+        /**
+         *
+         */
         private static final List<SqlBinaryOperator> EQUALS_OPERATORS =
-                ImmutableList.of(
+                List.of(
                         SqlStdOperatorTable.EQUALS,
                         SqlStdOperatorTable.NOT_EQUALS);
 
+        /**
+         *
+         */
         public static final String METHOD_POSTFIX_FOR_ANY_TYPE = "Any";
 
+        /**
+         *
+         */
         private final ExpressionType expressionType;
 
+        /**
+         *
+         */
         private final String backupMethodName;
 
+        /**
+         *
+         */
         BinaryImplementor(NullPolicy nullPolicy, boolean harmonize,
                 ExpressionType expressionType, String backupMethodName) {
             super(nullPolicy, harmonize);
@@ -1200,6 +1314,9 @@ public class RexImpTable {
             return false;
         }
 
+        /**
+         *
+         */
         private Expression callBackupMethodAnyType(List<Expression> expressions) {
             final String backupMethodNameForAnyType =
                     backupMethodName + METHOD_POSTFIX_FOR_ANY_TYPE;
@@ -1211,6 +1328,9 @@ public class RexImpTable {
                     expression0, expression1);
         }
 
+        /**
+         *
+         */
         private Expression maybeBox(Expression expression) {
             final Primitive primitive = Primitive.of(expression.getType());
             if (primitive != null) {
@@ -1223,10 +1343,19 @@ public class RexImpTable {
 
     /** Implementor for unary operators. */
     private static class UnaryImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         private final ExpressionType expressionType;
 
+        /**
+         *
+         */
         private final String backupMethodName;
 
+        /**
+         *
+         */
         UnaryImplementor(ExpressionType expressionType, NullPolicy nullPolicy,
                 String backupMethodName) {
             super(nullPolicy, false);
@@ -1268,6 +1397,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code EXTRACT(unit FROM datetime)} function. */
     private static class ExtractImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         ExtractImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -1409,6 +1541,9 @@ public class RexImpTable {
         }
     }
 
+    /**
+     *
+     */
     private static Expression mod(Expression operand, long factor) {
         if (factor == 1L) {
             return operand;
@@ -1418,6 +1553,9 @@ public class RexImpTable {
         }
     }
 
+    /**
+     *
+     */
     private static long getFactor(TimeUnit unit) {
         switch (unit) {
             case DAY:
@@ -1446,6 +1584,9 @@ public class RexImpTable {
 
     /** Implementor for the SQL {@code COALESCE} operator. */
     private static class CoalesceImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         CoalesceImplementor() {
             super(NullPolicy.NONE, false);
         }
@@ -1463,7 +1604,11 @@ public class RexImpTable {
             return implementRecurse(translator, argValueList);
         }
 
-        private Expression implementRecurse(RexToLixTranslator translator, final List<Expression> argValueList) {
+        /**
+         *
+         */
+        private Expression implementRecurse(RexToLixTranslator translator,
+                final List<Expression> argValueList) {
             if (argValueList.size() == 1) {
                 return argValueList.get(0);
             } else {
@@ -1477,6 +1622,9 @@ public class RexImpTable {
 
     /** Implementor for the SQL {@code CAST} operator. */
     private static class CastImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         CastImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -1513,6 +1661,9 @@ public class RexImpTable {
                     targetType, argValueList.get(0));
         }
 
+        /**
+         *
+         */
         private RelDataType nullifyType(JavaTypeFactory typeFactory,
                 final RelDataType type, final boolean nullable) {
             if (type instanceof RelDataTypeFactoryImpl.JavaType) {
@@ -1528,6 +1679,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code REINTERPRET} internal SQL operator. */
     private static class ReinterpretImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         ReinterpretImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -1548,8 +1702,12 @@ public class RexImpTable {
     }
 
     /** Implementor for a value-constructor. */
-    private static class ValueConstructorImplementor extends AbstractRexCallImplementor {
+    private static class ValueConstructorImplementor
+            extends AbstractRexCallImplementor {
 
+        /**
+         *
+         */
         ValueConstructorImplementor() {
             super(NullPolicy.NONE, false);
         }
@@ -1599,6 +1757,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code ITEM} SQL operator. */
     private static class ItemImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         ItemImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -1623,6 +1784,9 @@ public class RexImpTable {
             return implementor.implementSafe(translator, call, argValueList);
         }
 
+        /**
+         *
+         */
         private MethodImplementor getImplementor(SqlTypeName sqlTypeName) {
             switch (sqlTypeName) {
                 case ARRAY:
@@ -1641,7 +1805,11 @@ public class RexImpTable {
      * <p>Several of these are represented internally as constant values, set
      * per execution.
      */
-    private static class SystemFunctionImplementor extends AbstractRexCallImplementor {
+    private static class SystemFunctionImplementor
+            extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         SystemFunctionImplementor() {
             super(NullPolicy.NONE, false);
         }
@@ -1698,13 +1866,22 @@ public class RexImpTable {
 
     /** Implementor for the {@code NOT} operator. */
     private static class NotImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         private AbstractRexCallImplementor implementor;
 
+        /**
+         *
+         */
         private NotImplementor(AbstractRexCallImplementor implementor) {
             super(null, false);
             this.implementor = implementor;
         }
 
+        /**
+         *
+         */
         static AbstractRexCallImplementor of(AbstractRexCallImplementor implementor) {
             return new NotImplementor(implementor);
         }
@@ -1726,7 +1903,11 @@ public class RexImpTable {
     }
 
     /** Implementor for various datetime arithmetic. */
-    private static class DatetimeArithmeticImplementor extends AbstractRexCallImplementor {
+    private static class DatetimeArithmeticImplementor
+            extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         DatetimeArithmeticImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -1862,6 +2043,9 @@ public class RexImpTable {
 
     /** Null-safe implementor of {@code RexCall}s. */
     public interface RexCallImplementor {
+        /**
+         *
+         */
         RexToLixTranslator.Result implement(
                 RexToLixTranslator translator,
                 RexCall call,
@@ -1884,10 +2068,19 @@ public class RexImpTable {
      */
     private abstract static class AbstractRexCallImplementor
             implements RexCallImplementor {
+        /**
+         *
+         */
         final NullPolicy nullPolicy;
 
+        /**
+         *
+         */
         private final boolean harmonize;
 
+        /**
+         *
+         */
         AbstractRexCallImplementor(NullPolicy nullPolicy, boolean harmonize) {
             this.nullPolicy = nullPolicy;
             this.harmonize = harmonize;
@@ -1913,6 +2106,9 @@ public class RexImpTable {
             return new RexToLixTranslator.Result(isNullVariable, valueVariable);
         }
 
+        /**
+         *
+         */
         // Variable name facilitates reasoning about issues when necessary
         abstract String getVariableName();
 
@@ -1931,6 +2127,9 @@ public class RexImpTable {
             return Expressions.foldOr(argIsNullList);
         }
 
+        /**
+         *
+         */
         // E.g., "final Integer xxx_value = (a_isNull || b_isNull) ? null : plus(a, b)"
         private ParameterExpression genValueStatement(
                 final RexToLixTranslator translator,
@@ -1974,10 +2173,16 @@ public class RexImpTable {
             return value;
         }
 
+        /**
+         *
+         */
         Expression getIfTrue(Type type) {
             return getDefaultValue(type);
         }
 
+        /**
+         *
+         */
         // E.g., "final boolean xxx_isNull = xxx_value == null"
         private ParameterExpression genIsNullStatement(
                 final RexToLixTranslator translator, final ParameterExpression value) {
@@ -2049,6 +2254,9 @@ public class RexImpTable {
             return unboxValueList;
         }
 
+        /**
+         *
+         */
         private Expression unboxExpression(final Expression argValue) {
             Primitive fromBox = Primitive.ofBox(argValue.getType());
             if (fromBox == null || fromBox == Primitive.VOID) {
@@ -2069,6 +2277,9 @@ public class RexImpTable {
             return NullAs.NOT_POSSIBLE.handle(argValue);
         }
 
+        /**
+         *
+         */
         abstract Expression implementSafe(RexToLixTranslator translator,
                 RexCall call, List<Expression> argValueList);
     }
@@ -2080,6 +2291,9 @@ public class RexImpTable {
      * else if any arguments are null, result is null; else true.
      */
     private static class LogicalAndImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         LogicalAndImplementor() {
             super(NullPolicy.NONE, true);
         }
@@ -2143,6 +2357,9 @@ public class RexImpTable {
      * else if any arguments are null, result is null; else false.
      */
     private static class LogicalOrImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         LogicalOrImplementor() {
             super(NullPolicy.NONE, true);
         }
@@ -2205,6 +2422,9 @@ public class RexImpTable {
      * else if any arguments are null, result is null; else false.
      */
     private static class LogicalNotImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         LogicalNotImplementor() {
             super(NullPolicy.NONE, true);
         }
@@ -2230,8 +2450,14 @@ public class RexImpTable {
      * created.
      */
     private static class ReflectiveImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         protected final Method method;
 
+        /**
+         *
+         */
         ReflectiveImplementor(Method method, NullPolicy nullPolicy) {
             super(nullPolicy, false);
             this.method = method;
@@ -2261,11 +2487,17 @@ public class RexImpTable {
 
     /** Implementor for the {@code RAND} function. */
     private static class RandImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         private final AbstractRexCallImplementor[] implementors = {
                 new ReflectiveImplementor(BuiltInMethod.RAND.method, nullPolicy),
                 new ReflectiveImplementor(BuiltInMethod.RAND_SEED.method, nullPolicy)
         };
 
+        /**
+         *
+         */
         RandImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2287,12 +2519,18 @@ public class RexImpTable {
 
     /** Implementor for the {@code RAND_INTEGER} function. */
     private static class RandIntegerImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         private final AbstractRexCallImplementor[] implementors = {
                 null,
                 new ReflectiveImplementor(BuiltInMethod.RAND_INTEGER.method, nullPolicy),
                 new ReflectiveImplementor(BuiltInMethod.RAND_INTEGER_SEED.method, nullPolicy)
         };
 
+        /**
+         *
+         */
         RandIntegerImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2314,6 +2552,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code PI} operator. */
     private static class PiImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         PiImplementor() {
             super(NullPolicy.NONE, false);
         }
@@ -2334,6 +2575,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code IS FALSE} SQL operator. */
     private static class IsFalseImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         IsFalseImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2360,6 +2604,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code IS NOT FALSE} SQL operator. */
     private static class IsNotFalseImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         IsNotFalseImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2386,6 +2633,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code IS NOT NULL} SQL operator. */
     private static class IsNotNullImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         IsNotNullImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2412,6 +2662,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code IS NOT TRUE} SQL operator. */
     private static class IsNotTrueImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         IsNotTrueImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2438,6 +2691,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code IS NULL} SQL operator. */
     private static class IsNullImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         IsNullImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2464,6 +2720,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code IS TRUE} SQL operator. */
     private static class IsTrueImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         IsTrueImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2497,6 +2756,9 @@ public class RexImpTable {
                 new ReflectiveImplementor(BuiltInMethod.REGEXP_REPLACE6.method, nullPolicy),
         };
 
+        /**
+         *
+         */
         RegexpReplaceImplementor() {
             super(NullPolicy.STRICT, false);
         }
@@ -2517,6 +2779,9 @@ public class RexImpTable {
 
     /** Implementor for the {@code DEFAULT} function. */
     private static class DefaultImplementor extends AbstractRexCallImplementor {
+        /**
+         *
+         */
         DefaultImplementor() {
             super(NullPolicy.NONE, false);
         }
@@ -2535,6 +2800,9 @@ public class RexImpTable {
         }
     }
 
+    /**
+     *
+     */
     private static CallImplementor createTableFunctionImplementor(final Method method) {
         return createImplementor(
                 new ReflectiveCallNotNullImplementor(method) {
@@ -2565,8 +2833,7 @@ public class RexImpTable {
     }
 
     /**
-     * Create implementor.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
      */
     public static CallImplementor createImplementor(
             final NotNullImplementor implementor,
@@ -2582,6 +2849,9 @@ public class RexImpTable {
         };
     }
 
+    /**
+     *
+     */
     private static RexCallImplementor createRexCallImplementor(
             final NotNullImplementor implementor,
             final NullPolicy nullPolicy,
