@@ -26,7 +26,6 @@ import static org.apache.ignite.internal.processors.query.calcite.trait.IgniteDi
 import static org.apache.ignite.internal.processors.query.calcite.trait.IgniteDistributions.single;
 import static org.apache.ignite.internal.util.CollectionUtils.nullOrEmpty;
 
-import com.google.common.collect.ImmutableList;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -60,10 +59,12 @@ import org.apache.ignite.internal.processors.query.calcite.trait.TraitsAwareIgni
 import org.apache.ignite.internal.processors.query.calcite.util.Commons;
 
 /**
- * AbstractIgniteJoin.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgniteRel {
+    /**
+     *
+     */
     protected AbstractIgniteJoin(RelOptCluster cluster, RelTraitSet traitSet, RelNode left, RelNode right,
             RexNode condition, Set<CorrelationId> variablesSet, JoinRelType joinType) {
         super(cluster, traitSet, left, right, condition, variablesSet, joinType);
@@ -103,7 +104,7 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
         RelTraitSet leftTraits = left.replace(collation);
         RelTraitSet rightTraits = right.replace(RelCollations.EMPTY);
 
-        return ImmutableList.of(Pair.of(outTraits, ImmutableList.of(leftTraits, rightTraits)));
+        return List.of(Pair.of(outTraits, List.of(leftTraits, rightTraits)));
     }
 
     /** {@inheritDoc} */
@@ -120,14 +121,14 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
         List<Pair<RelTraitSet, List<RelTraitSet>>> pairs = new ArrayList<>();
 
         pairs.add(Pair.of(nodeTraits.replace(RewindabilityTrait.ONE_WAY),
-                ImmutableList.of(left.replace(RewindabilityTrait.ONE_WAY), right.replace(RewindabilityTrait.ONE_WAY))));
+                List.of(left.replace(RewindabilityTrait.ONE_WAY), right.replace(RewindabilityTrait.ONE_WAY))));
 
         if (leftRewindability.rewindable() && rightRewindability.rewindable()) {
             pairs.add(Pair.of(nodeTraits.replace(RewindabilityTrait.REWINDABLE),
-                    ImmutableList.of(left.replace(RewindabilityTrait.REWINDABLE), right.replace(RewindabilityTrait.REWINDABLE))));
+                    List.of(left.replace(RewindabilityTrait.REWINDABLE), right.replace(RewindabilityTrait.REWINDABLE))));
         }
 
-        return ImmutableList.copyOf(pairs);
+        return List.copyOf(pairs);
     }
 
     /** {@inheritDoc} */
@@ -147,8 +148,8 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
 
         List<Pair<RelTraitSet, List<RelTraitSet>>> res = new ArrayList<>();
 
-        IgniteDistribution leftDistr = TraitUtils.distribution(left);
-        IgniteDistribution rightDistr = TraitUtils.distribution(right);
+        final IgniteDistribution leftDistr = TraitUtils.distribution(left);
+        final IgniteDistribution rightDistr = TraitUtils.distribution(right);
 
         final IgniteDistribution left2rightProjectedDistr = leftDistr.apply(buildProjectionMapping(true));
         final IgniteDistribution right2leftProjectedDistr = rightDistr.apply(buildProjectionMapping(false));
@@ -167,10 +168,10 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
             rightTraits = right.replace(single());
         }
 
-        res.add(Pair.of(outTraits, ImmutableList.of(leftTraits, rightTraits)));
+        res.add(Pair.of(outTraits, List.of(leftTraits, rightTraits)));
 
         if (nullOrEmpty(joinInfo.pairs())) {
-            return ImmutableList.copyOf(res);
+            return List.copyOf(res);
         }
 
         if (leftDistr.getType() == HASH_DISTRIBUTED && left2rightProjectedDistr != random()) {
@@ -178,7 +179,7 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
             leftTraits = left.replace(leftDistr);
             rightTraits = right.replace(left2rightProjectedDistr);
 
-            res.add(Pair.of(outTraits, ImmutableList.of(leftTraits, rightTraits)));
+            res.add(Pair.of(outTraits, List.of(leftTraits, rightTraits)));
         }
 
         if (rightDistr.getType() == HASH_DISTRIBUTED && right2leftProjectedDistr != random()) {
@@ -186,19 +187,19 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
             leftTraits = left.replace(right2leftProjectedDistr);
             rightTraits = right.replace(rightDistr);
 
-            res.add(Pair.of(outTraits, ImmutableList.of(leftTraits, rightTraits)));
+            res.add(Pair.of(outTraits, List.of(leftTraits, rightTraits)));
         }
 
         leftTraits = left.replace(hash(joinInfo.leftKeys, DistributionFunction.hash()));
         rightTraits = right.replace(hash(joinInfo.rightKeys, DistributionFunction.hash()));
 
         outTraits = nodeTraits.replace(hash(joinInfo.leftKeys, DistributionFunction.hash()));
-        res.add(Pair.of(outTraits, ImmutableList.of(leftTraits, rightTraits)));
+        res.add(Pair.of(outTraits, List.of(leftTraits, rightTraits)));
 
         outTraits = nodeTraits.replace(hash(joinInfo.rightKeys, DistributionFunction.hash()));
-        res.add(Pair.of(outTraits, ImmutableList.of(leftTraits, rightTraits)));
+        res.add(Pair.of(outTraits, List.of(leftTraits, rightTraits)));
 
-        return ImmutableList.copyOf(res);
+        return List.copyOf(res);
     }
 
     /** {@inheritDoc} */
@@ -210,7 +211,7 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
         // right correlations
         corrIds.addAll(TraitUtils.correlation(inTraits.get(1)).correlationIds());
 
-        return ImmutableList.of(Pair.of(nodeTraits.replace(CorrelationTrait.correlations(corrIds)), inTraits));
+        return List.of(Pair.of(nodeTraits.replace(CorrelationTrait.correlations(corrIds)), inTraits));
     }
 
     /** {@inheritDoc} */
@@ -227,7 +228,7 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
 
         if (collation.equals(RelCollations.EMPTY)) {
             return Pair.of(nodeTraits,
-                    ImmutableList.of(left.replace(RelCollations.EMPTY), right.replace(RelCollations.EMPTY)));
+                    List.of(left.replace(RelCollations.EMPTY), right.replace(RelCollations.EMPTY)));
         }
 
         if (!projectsLeft(collation)) {
@@ -242,7 +243,7 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
         }
 
         return Pair.of(nodeTraits.replace(collation),
-                ImmutableList.of(left.replace(collation), right.replace(RelCollations.EMPTY)));
+                List.of(left.replace(collation), right.replace(RelCollations.EMPTY)));
     }
 
     /** {@inheritDoc} */
@@ -289,7 +290,7 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
 
                 if (distrType != HASH_DISTRIBUTED || outDistr.satisfies(distribution)) {
                     return Pair.of(nodeTraits.replace(outDistr),
-                            ImmutableList.of(left.replace(outDistr), right.replace(hash(joinInfo.rightKeys, function))));
+                            List.of(left.replace(outDistr), right.replace(hash(joinInfo.rightKeys, function))));
                 }
 
                 break;
@@ -307,6 +308,9 @@ public abstract class AbstractIgniteJoin extends Join implements TraitsAwareIgni
         return Util.first(joinRowCount(mq, this), 1D);
     }
 
+    /**
+     *
+     */
     protected boolean projectsLeft(RelCollation collation) {
         int leftFieldCount = getLeft().getRowType().getFieldCount();
         for (int field : RelCollations.ordinals(collation)) {
