@@ -17,7 +17,6 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptCost;
@@ -35,22 +34,21 @@ import org.apache.calcite.util.Pair;
 import org.apache.ignite.internal.processors.query.calcite.metadata.cost.IgniteCost;
 
 /**
- * IgniteLimit.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 public class IgniteLimit extends SingleRel implements IgniteRel {
     /** In case the fetch value is a DYNAMIC_PARAM. */
     private static final double FETCH_IS_PARAM_FACTOR = 0.01;
-
+    
     /** In case the offset value is a DYNAMIC_PARAM. */
     private static final double OFFSET_IS_PARAM_FACTOR = 0.5;
-
+    
     /** Offset. */
     private final RexNode offset;
-
-    /** Fetches rows expression (limit). */
+    
+    /** Fetches rows expression (limit) */
     private final RexNode fetch;
-
+    
     /**
      * Constructor.
      *
@@ -71,10 +69,9 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
         this.offset = offset;
         this.fetch = fetch;
     }
-
+    
     /**
-     * Constructor.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
      */
     public IgniteLimit(RelInput input) {
         super(
@@ -82,17 +79,17 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
                 input.getTraitSet().replace(IgniteConvention.INSTANCE),
                 input.getInputs().get(0)
         );
-
+        
         offset = input.getExpression("offset");
         fetch = input.getExpression("fetch");
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public final IgniteLimit copy(RelTraitSet traitSet, List<RelNode> inputs) {
         return new IgniteLimit(getCluster(), traitSet, sole(inputs), offset, fetch);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public RelWriter explainTerms(RelWriter pw) {
@@ -101,63 +98,60 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
         pw.itemIf("fetch", fetch, fetch != null);
         return pw;
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public <T> T accept(IgniteRelVisitor<T> visitor) {
         return visitor.visit(this);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public Pair<RelTraitSet, List<RelTraitSet>> passThroughTraits(RelTraitSet required) {
         if (required.getConvention() != IgniteConvention.INSTANCE) {
             return null;
         }
-
-        return Pair.of(required, ImmutableList.of(required));
+        
+        return Pair.of(required, List.of(required));
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public Pair<RelTraitSet, List<RelTraitSet>> deriveTraits(RelTraitSet childTraits, int childId) {
         assert childId == 0;
-
+    
         if (childTraits.getConvention() != IgniteConvention.INSTANCE) {
             return null;
         }
-
-        return Pair.of(childTraits, ImmutableList.of(childTraits));
+        
+        return Pair.of(childTraits, List.of(childTraits));
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public RelOptCost computeSelfCost(RelOptPlanner planner, RelMetadataQuery mq) {
         double inputRowCount = mq.getRowCount(getInput());
-
+        
         double lim = fetch != null ? doubleFromRex(fetch, inputRowCount * FETCH_IS_PARAM_FACTOR) : inputRowCount;
         double off = offset != null ? doubleFromRex(offset, inputRowCount * OFFSET_IS_PARAM_FACTOR) : 0;
-
+        
         double rows = Math.min(lim + off, inputRowCount);
-
+        
         return planner.getCostFactory().makeCost(rows, rows * IgniteCost.ROW_PASS_THROUGH_COST, 0);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public double estimateRowCount(RelMetadataQuery mq) {
         double inputRowCount = mq.getRowCount(getInput());
-
+        
         double lim = fetch != null ? doubleFromRex(fetch, inputRowCount * FETCH_IS_PARAM_FACTOR) : inputRowCount;
         double off = offset != null ? doubleFromRex(offset, inputRowCount * OFFSET_IS_PARAM_FACTOR) : 0;
-
+        
         return Math.min(lim, inputRowCount - off);
     }
-
+    
     /**
-     * Get double from rex.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
-     *
      * @return Integer value of the literal expression.
      */
     private double doubleFromRex(RexNode n, double def) {
@@ -169,25 +163,25 @@ public class IgniteLimit extends SingleRel implements IgniteRel {
             }
         } catch (Exception e) {
             assert false : "Unable to extract value: " + e.getMessage();
-
+            
             return def;
         }
     }
-
+    
     /**
-     * Get offset.
+     * @return Offset.
      */
     public RexNode offset() {
         return offset;
     }
-
+    
     /**
-     * Get fetches rows expression (limit).
+     * @return Fetches rows expression (limit)
      */
     public RexNode fetch() {
         return fetch;
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public IgniteRel clone(RelOptCluster cluster, List<IgniteRel> inputs) {
