@@ -21,12 +21,10 @@ import static org.apache.ignite.internal.processors.query.calcite.trait.TraitUti
 import static org.apache.ignite.internal.processors.query.calcite.util.Commons.isPrefix;
 import static org.apache.ignite.internal.processors.query.calcite.util.Commons.maxPrefix;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
+import it.unimi.dsi.fastutil.ints.Int2IntOpenHashMap;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 import org.apache.calcite.plan.RelOptCluster;
@@ -35,6 +33,7 @@ import org.apache.calcite.plan.RelOptPlanner;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelCollation;
 import org.apache.calcite.rel.RelCollations;
+import org.apache.calcite.rel.RelFieldCollation;
 import org.apache.calcite.rel.RelInput;
 import org.apache.calcite.rel.RelNode;
 import org.apache.calcite.rel.RelWriter;
@@ -44,6 +43,7 @@ import org.apache.calcite.rel.core.JoinRelType;
 import org.apache.calcite.rel.metadata.RelMetadataQuery;
 import org.apache.calcite.rex.RexNode;
 import org.apache.calcite.util.Pair;
+import org.apache.calcite.util.mapping.IntPair;
 import org.apache.ignite.internal.processors.query.calcite.externalize.RelInputEx;
 import org.apache.ignite.internal.processors.query.calcite.metadata.cost.IgniteCost;
 import org.apache.ignite.internal.processors.query.calcite.metadata.cost.IgniteCostFactory;
@@ -51,23 +51,21 @@ import org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils;
 import org.apache.ignite.internal.processors.query.calcite.util.Commons;
 
 /**
- * IgniteMergeJoin.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 public class IgniteMergeJoin extends AbstractIgniteJoin {
     /**
      * Collation of a left child. Keep it here to restore after deserialization.
      */
     private final RelCollation leftCollation;
-
+    
     /**
      * Collation of a right child. Keep it here to restore after deserialization.
      */
     private final RelCollation rightCollation;
-
+    
     /**
-     * Constructor.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
      */
     public IgniteMergeJoin(
             RelOptCluster cluster,
@@ -81,10 +79,9 @@ public class IgniteMergeJoin extends AbstractIgniteJoin {
         this(cluster, traitSet, left, right, condition, variablesSet, joinType,
                 left.getTraitSet().getCollation(), right.getTraitSet().getCollation());
     }
-
+    
     /**
-     * Constructor.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
      */
     public IgniteMergeJoin(RelInput input) {
         this(
@@ -93,13 +90,16 @@ public class IgniteMergeJoin extends AbstractIgniteJoin {
                 input.getInputs().get(0),
                 input.getInputs().get(1),
                 input.getExpression("condition"),
-                ImmutableSet.copyOf(Commons.transform(input.getIntegerList("variablesSet"), CorrelationId::new)),
+                Set.copyOf(Commons.transform(input.getIntegerList("variablesSet"), CorrelationId::new)),
                 input.getEnum("joinType", JoinRelType.class),
                 ((RelInputEx) input).getCollation("leftCollation"),
                 ((RelInputEx) input).getCollation("rightCollation")
         );
     }
-
+    
+    /**
+     *
+     */
     private IgniteMergeJoin(
             RelOptCluster cluster,
             RelTraitSet traitSet,
@@ -112,11 +112,11 @@ public class IgniteMergeJoin extends AbstractIgniteJoin {
             RelCollation rightCollation
     ) {
         super(cluster, traitSet, left, right, condition, variablesSet, joinType);
-
+        
         this.leftCollation = leftCollation;
         this.rightCollation = rightCollation;
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public Join copy(RelTraitSet traitSet, RexNode condition, RelNode left, RelNode right,
@@ -124,20 +124,20 @@ public class IgniteMergeJoin extends AbstractIgniteJoin {
         return new IgniteMergeJoin(getCluster(), traitSet, left, right, condition, variablesSet, joinType,
                 leftCollation, rightCollation);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public <T> T accept(IgniteRelVisitor<T> visitor) {
         return visitor.visit(this);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public IgniteRel clone(RelOptCluster cluster, List<IgniteRel> inputs) {
         return new IgniteMergeJoin(cluster, getTraitSet(), inputs.get(0), inputs.get(1), getCondition(),
                 getVariablesSet(), getJoinType(), leftCollation, rightCollation);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public List<Pair<RelTraitSet, List<RelTraitSet>>> deriveCollation(
@@ -148,27 +148,30 @@ public class IgniteMergeJoin extends AbstractIgniteJoin {
         RelTraitSet right = inputTraits.get(1);
         RelCollation leftCollation = TraitUtils.collation(left);
         RelCollation rightCollation = TraitUtils.collation(right);
-
-        if (isPrefix(leftCollation.getKeys(), joinInfo.leftKeys)) { // preserve left collation
+    
+        if (isPrefix(leftCollation.getKeys(), joinInfo.leftKeys)) {
+            // preserve left collation
             rightCollation = leftCollation.apply(buildProjectionMapping(true));
-        } else if (isPrefix(rightCollation.getKeys(), joinInfo.rightKeys)) { // preserve right collation
+        } else if (isPrefix(rightCollation.getKeys(), joinInfo.rightKeys)) {
+            // preserve right collation
             leftCollation = rightCollation.apply(buildProjectionMapping(false));
-        } else { // generate new collations
+        } else {
+            // generate new collations
             leftCollation = RelCollations.of(joinInfo.leftKeys);
             rightCollation = RelCollations.of(joinInfo.rightKeys);
         }
-
-        return ImmutableList.of(
+        
+        return List.of(
                 Pair.of(
                         nodeTraits.replace(leftCollation),
-                        ImmutableList.of(
+                        List.of(
                                 left.replace(leftCollation),
                                 right.replace(rightCollation)
                         )
                 )
         );
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public Pair<RelTraitSet, List<RelTraitSet>> passThroughCollation(
@@ -176,102 +179,114 @@ public class IgniteMergeJoin extends AbstractIgniteJoin {
             List<RelTraitSet> inputTraits
     ) {
         RelCollation collation = TraitUtils.collation(nodeTraits);
-        RelTraitSet left = inputTraits.get(0);
-        RelTraitSet right = inputTraits.get(1);
-
+        
         int rightOff = this.left.getRowType().getFieldCount();
-
-        Map<Integer, Integer> rightToLeft = joinInfo.pairs().stream()
-                .collect(Collectors.toMap(p -> p.target, p -> p.source));
-
+        
+        List<IntPair> pairs = joinInfo.pairs();
+        
+        Int2IntOpenHashMap rightToLeft = new Int2IntOpenHashMap(pairs.size());
+        
+        for (IntPair pair : pairs) {
+            rightToLeft.put(pair.target, pair.source);
+        }
+        
         List<Integer> collationLeftPrj = new ArrayList<>();
-
-        for (Integer c : collation.getKeys()) {
+        
+        for (RelFieldCollation fieldCollation : collation.getFieldCollations()) {
+            int c = fieldCollation.getFieldIndex();
             collationLeftPrj.add(
                     c >= rightOff ? rightToLeft.get(c - rightOff) : c
             );
         }
-
+        
         boolean preserveNodeCollation = false;
-
+        
         List<Integer> newLeftCollation;
         List<Integer> newRightCollation;
 
-        Map<Integer, Integer> leftToRight = joinInfo.pairs().stream()
-                .collect(Collectors.toMap(p -> p.source, p -> p.target));
+        Int2IntOpenHashMap leftToRight = new Int2IntOpenHashMap(pairs.size());
+
+        for (IntPair pair : pairs) {
+            leftToRight.put(pair.source, pair.target);
+        }
 
         if (isPrefix(collationLeftPrj, joinInfo.leftKeys)) { // preserve collation
             newLeftCollation = new ArrayList<>();
             newRightCollation = new ArrayList<>();
-
+            
             int ind = 0;
-            for (Integer c : collation.getKeys()) {
+            for (RelFieldCollation fieldCollation : collation.getFieldCollations()) {
+                int c = fieldCollation.getFieldIndex();
+
                 if (c < rightOff) {
                     newLeftCollation.add(c);
-
+    
                     if (ind < joinInfo.leftKeys.size()) {
                         newRightCollation.add(leftToRight.get(c));
                     }
                 } else {
                     c -= rightOff;
                     newRightCollation.add(c);
-
+    
                     if (ind < joinInfo.leftKeys.size()) {
                         newLeftCollation.add(rightToLeft.get(c));
                     }
                 }
-
+                
                 ind++;
             }
-
+            
             preserveNodeCollation = true;
         } else { // generate new collations
             newLeftCollation = maxPrefix(collationLeftPrj, joinInfo.leftKeys);
-
+            
             Set<Integer> tail = new HashSet<>(joinInfo.leftKeys);
-
+            
             tail.removeAll(newLeftCollation);
-
+            
             newLeftCollation.addAll(tail);
-
+            
             newRightCollation = newLeftCollation.stream().map(leftToRight::get).collect(Collectors.toList());
         }
-
+        
         RelCollation leftCollation = createCollation(newLeftCollation);
         RelCollation rightCollation = createCollation(newRightCollation);
-
+        
+        RelTraitSet left = inputTraits.get(0);
+        RelTraitSet right = inputTraits.get(1);
+        
         return Pair.of(
                 nodeTraits.replace(preserveNodeCollation ? collation : leftCollation),
-                ImmutableList.of(
+                List.of(
                         left.replace(leftCollation),
                         right.replace(rightCollation)
                 )
         );
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public RelOptCost computeSelfCost(RelOptPlanner planner, RelMetadataQuery mq) {
         IgniteCostFactory costFactory = (IgniteCostFactory) planner.getCostFactory();
-
+        
         double leftCount = mq.getRowCount(getLeft());
-
+    
         if (Double.isInfinite(leftCount)) {
             return costFactory.makeInfiniteCost();
         }
-
+        
         double rightCount = mq.getRowCount(getRight());
-
+    
         if (Double.isInfinite(rightCount)) {
             return costFactory.makeInfiniteCost();
         }
-
+        
         double rows = leftCount + rightCount;
-
+        
         return costFactory.makeCost(rows,
                 rows * (IgniteCost.ROW_COMPARISON_COST + IgniteCost.ROW_PASS_THROUGH_COST), 0);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public RelWriter explainTerms(RelWriter pw) {
@@ -279,16 +294,16 @@ public class IgniteMergeJoin extends AbstractIgniteJoin {
                 .item("leftCollation", leftCollation)
                 .item("rightCollation", rightCollation);
     }
-
+    
     /**
-     * Get collation of a left child.
+     * @return Collation of a left child.
      */
     public RelCollation leftCollation() {
         return leftCollation;
     }
-
+    
     /**
-     * Get collation of a right child.
+     * @return Collation of a right child.
      */
     public RelCollation rightCollation() {
         return rightCollation;
