@@ -19,7 +19,6 @@ package org.apache.ignite.internal.processors.query.calcite.rel;
 
 import static org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils.changeTraits;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptCost;
@@ -57,15 +56,14 @@ public class IgniteSort extends Sort implements IgniteRel {
             RelCollation collation) {
         super(cluster, traits, child, collation);
     }
-
+    
     /**
-     * Constructor.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
      */
     public IgniteSort(RelInput input) {
         super(changeTraits(input, IgniteConvention.INSTANCE));
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public Sort copy(
@@ -76,59 +74,59 @@ public class IgniteSort extends Sort implements IgniteRel {
             RexNode fetch
     ) {
         assert offset == null && fetch == null;
-
+        
         return new IgniteSort(getCluster(), traitSet, newInput, newCollation);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public <T> T accept(IgniteRelVisitor<T> visitor) {
         return visitor.visit(this);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public RelCollation collation() {
         return collation;
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public Pair<RelTraitSet, List<RelTraitSet>> passThroughTraits(RelTraitSet required) {
         if (isEnforcer() || required.getConvention() != IgniteConvention.INSTANCE) {
             return null;
         }
-
+        
         RelCollation collation = TraitUtils.collation(required);
-
-        return Pair.of(required.replace(collation), ImmutableList.of(required.replace(RelCollations.EMPTY)));
+        
+        return Pair.of(required.replace(collation), List.of(required.replace(RelCollations.EMPTY)));
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public Pair<RelTraitSet, List<RelTraitSet>> deriveTraits(RelTraitSet childTraits, int childId) {
         assert childId == 0;
-
+    
         if (isEnforcer() || childTraits.getConvention() != IgniteConvention.INSTANCE) {
             return null;
         }
-
-        return Pair.of(childTraits.replace(collation()), ImmutableList.of(childTraits));
+        
+        return Pair.of(childTraits.replace(collation()), List.of(childTraits));
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public RelOptCost computeSelfCost(RelOptPlanner planner, RelMetadataQuery mq) {
         double rows = mq.getRowCount(getInput());
-
+        
         double cpuCost = rows * IgniteCost.ROW_PASS_THROUGH_COST + Util.nLogN(rows) * IgniteCost.ROW_COMPARISON_COST;
         double memory = rows * getRowType().getFieldCount() * IgniteCost.AVERAGE_FIELD_SIZE;
-
+        
         IgniteCostFactory costFactory = (IgniteCostFactory) planner.getCostFactory();
-
+        
         return costFactory.makeCost(rows, cpuCost, 0, memory, 0);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public IgniteRel clone(RelOptCluster cluster, List<IgniteRel> inputs) {
