@@ -17,7 +17,6 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel.agg;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelCollations;
@@ -25,8 +24,7 @@ import org.apache.calcite.util.Pair;
 import org.apache.ignite.internal.processors.query.calcite.trait.TraitsAwareIgniteRel;
 
 /**
- * IgniteHashAggregateBase interface.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 interface IgniteHashAggregateBase extends TraitsAwareIgniteRel {
     /** {@inheritDoc} */
@@ -34,15 +32,15 @@ interface IgniteHashAggregateBase extends TraitsAwareIgniteRel {
     default Pair<RelTraitSet, List<RelTraitSet>> passThroughCollation(RelTraitSet nodeTraits, List<RelTraitSet> inputTraits) {
         // Since it's a hash aggregate it erases collation.
         return Pair.of(nodeTraits.replace(RelCollations.EMPTY),
-                ImmutableList.of(inputTraits.get(0).replace(RelCollations.EMPTY)));
+                List.of(inputTraits.get(0).replace(RelCollations.EMPTY)));
     }
 
     /** {@inheritDoc} */
     @Override
     default List<Pair<RelTraitSet, List<RelTraitSet>>> deriveCollation(RelTraitSet nodeTraits, List<RelTraitSet> inputTraits) {
         // Since it's a hash aggregate it erases collation.
-        return ImmutableList.of(Pair.of(nodeTraits.replace(RelCollations.EMPTY),
-                ImmutableList.of(inputTraits.get(0).replace(RelCollations.EMPTY))));
+        return List.of(Pair.of(nodeTraits.replace(RelCollations.EMPTY),
+                List.of(inputTraits.get(0).replace(RelCollations.EMPTY))));
     }
 
 }
