@@ -17,7 +17,6 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel.agg;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.linq4j.Ord;
 import org.apache.calcite.plan.RelOptCluster;
@@ -42,16 +41,27 @@ import org.apache.ignite.internal.processors.query.calcite.trait.TraitsAwareIgni
 import org.apache.ignite.internal.processors.query.calcite.util.Commons;
 
 /**
- * IgniteReduceAggregateBase.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 public abstract class IgniteReduceAggregateBase extends SingleRel implements TraitsAwareIgniteRel {
+    /**
+     *
+     */
     protected final ImmutableBitSet groupSet;
 
+    /**
+     *
+     */
     protected final List<ImmutableBitSet> groupSets;
 
+    /**
+     *
+     */
     protected final List<AggregateCall> aggCalls;
 
+    /**
+     *
+     */
     protected IgniteReduceAggregateBase(
             RelOptCluster cluster,
             RelTraitSet traits,
@@ -66,13 +76,16 @@ public abstract class IgniteReduceAggregateBase extends SingleRel implements Tra
         assert rowType != null;
         this.groupSet = groupSet;
         if (groupSets == null) {
-            groupSets = ImmutableList.of(groupSet);
+            groupSets = List.of(groupSet);
         }
         this.groupSets = groupSets;
         this.aggCalls = aggCalls;
         this.rowType = rowType;
     }
 
+    /**
+     *
+     */
     protected IgniteReduceAggregateBase(RelInput input) {
         this(
                 input.getCluster(),
@@ -108,14 +121,23 @@ public abstract class IgniteReduceAggregateBase extends SingleRel implements Tra
         return pw;
     }
 
+    /**
+     *
+     */
     public ImmutableBitSet getGroupSet() {
         return groupSet;
     }
 
+    /**
+     *
+     */
     public List<ImmutableBitSet> getGroupSets() {
         return groupSets;
     }
 
+    /**
+     *
+     */
     public List<AggregateCall> getAggregateCalls() {
         return aggCalls;
     }
@@ -137,8 +159,8 @@ public abstract class IgniteReduceAggregateBase extends SingleRel implements Tra
             RelTraitSet nodeTraits,
             List<RelTraitSet> inputTraits
     ) {
-        return ImmutableList.of(
-                Pair.of(nodeTraits.replace(RewindabilityTrait.ONE_WAY), ImmutableList.of(inputTraits.get(0))));
+        return List.of(
+                Pair.of(nodeTraits.replace(RewindabilityTrait.ONE_WAY), List.of(inputTraits.get(0))));
     }
 
     /** {@inheritDoc} */
@@ -149,10 +171,10 @@ public abstract class IgniteReduceAggregateBase extends SingleRel implements Tra
     ) {
         RelTraitSet in = inputTraits.get(0);
 
-        return ImmutableList.of(
+        return List.of(
                 Pair.of(
                         nodeTraits.replace(IgniteDistributions.single()),
-                        ImmutableList.of(in.replace(IgniteDistributions.single()))
+                        List.of(in.replace(IgniteDistributions.single()))
                 )
         );
     }
@@ -163,7 +185,7 @@ public abstract class IgniteReduceAggregateBase extends SingleRel implements Tra
             RelTraitSet nodeTraits,
             List<RelTraitSet> inTraits
     ) {
-        return ImmutableList.of(Pair.of(nodeTraits.replace(TraitUtils.correlation(inTraits.get(0))),
+        return List.of(Pair.of(nodeTraits.replace(TraitUtils.correlation(inTraits.get(0))),
                 inTraits));
     }
 
