@@ -17,7 +17,6 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel.agg;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelTraitSet;
@@ -34,8 +33,7 @@ import org.apache.ignite.internal.processors.query.calcite.trait.TraitsAwareIgni
 import org.apache.ignite.internal.processors.query.calcite.util.Commons;
 
 /**
- * IgniteSingleAggregateBase.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 public abstract class IgniteSingleAggregateBase extends IgniteAggregate implements TraitsAwareIgniteRel {
     /** {@inheritDoc} */
@@ -72,7 +70,7 @@ public abstract class IgniteSingleAggregateBase extends IgniteAggregate implemen
             RelTraitSet nodeTraits,
             List<RelTraitSet> inputTraits
     ) {
-        return ImmutableList.of(Pair.of(nodeTraits, ImmutableList.of(inputTraits.get(0))));
+        return List.of(Pair.of(nodeTraits, List.of(inputTraits.get(0))));
     }
 
     /** {@inheritDoc} */
@@ -84,10 +82,10 @@ public abstract class IgniteSingleAggregateBase extends IgniteAggregate implemen
         RelTraitSet in = inputTraits.get(0);
 
         if (!TraitUtils.distribution(in).satisfies(IgniteDistributions.single())) {
-            return ImmutableList.of();
+            return List.of();
         }
 
-        return ImmutableList.of(Pair.of(nodeTraits.replace(IgniteDistributions.single()), ImmutableList.of(in)));
+        return List.of(Pair.of(nodeTraits.replace(IgniteDistributions.single()), List.of(in)));
     }
 
     /** {@inheritDoc} */
@@ -96,7 +94,7 @@ public abstract class IgniteSingleAggregateBase extends IgniteAggregate implemen
             RelTraitSet nodeTraits,
             List<RelTraitSet> inTraits
     ) {
-        return ImmutableList.of(Pair.of(nodeTraits.replace(TraitUtils.correlation(inTraits.get(0))),
+        return List.of(Pair.of(nodeTraits.replace(TraitUtils.correlation(inTraits.get(0))),
                 inTraits));
     }
 }
