@@ -19,7 +19,6 @@ package org.apache.ignite.internal.processors.query.calcite.rel.agg;
 
 import static org.apache.ignite.internal.processors.query.calcite.util.Commons.maxPrefix;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.RelCollation;
@@ -31,8 +30,7 @@ import org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils;
 import org.apache.ignite.internal.processors.query.calcite.trait.TraitsAwareIgniteRel;
 
 /**
- * IgniteSortAggregateBase.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 interface IgniteSortAggregateBase extends TraitsAwareIgniteRel {
     /**
@@ -50,7 +48,7 @@ interface IgniteSortAggregateBase extends TraitsAwareIgniteRel {
         RelCollation collation = RelCollations.of(ImmutableIntList.copyOf(getGroupSet().asList()));
 
         return Pair.of(nodeTraits.replace(collation),
-                ImmutableList.of(inputTraits.get(0).replace(collation)));
+                List.of(inputTraits.get(0).replace(collation)));
     }
 
     /** {@inheritDoc} */
@@ -63,10 +61,10 @@ interface IgniteSortAggregateBase extends TraitsAwareIgniteRel {
         List<Integer> newCollation = maxPrefix(inputCollation.getKeys(), getGroupSet().asSet());
 
         if (newCollation.size() < getGroupSet().cardinality()) {
-            return ImmutableList.of();
+            return List.of();
         }
 
-        return ImmutableList.of(Pair.of(
+        return List.of(Pair.of(
                 nodeTraits.replace(RelCollations.of(ImmutableIntList.copyOf(newCollation))),
                 inputTraits
         ));
