@@ -17,7 +17,6 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel.logical;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptTable;
@@ -37,8 +36,7 @@ import org.apache.ignite.internal.processors.query.calcite.util.RexUtils;
 import org.jetbrains.annotations.Nullable;
 
 /**
- * IgniteLogicalIndexScan.
- * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ *
  */
 public class IgniteLogicalIndexScan extends AbstractIndexScan {
     /** Creates a IgniteLogicalIndexScan. */
@@ -55,7 +53,7 @@ public class IgniteLogicalIndexScan extends AbstractIndexScan {
         IgniteTypeFactory typeFactory = Commons.typeFactory(cluster);
         RelDataType rowType = tbl.getRowType(typeFactory, requiredColumns);
         RelCollation collation = tbl.getIndex(idxName).collation();
-
+        
         if (requiredColumns != null) {
             Mappings.TargetMapping targetMapping = Commons.mapping(requiredColumns,
                     tbl.getRowType(typeFactory).getFieldCount());
@@ -64,9 +62,9 @@ public class IgniteLogicalIndexScan extends AbstractIndexScan {
                 collation = TraitUtils.projectCollation(collation, proj, rowType);
             }
         }
-
+        
         IndexConditions idxCond = new IndexConditions();
-
+        
         if (collation != null && !collation.getFieldCollations().isEmpty()) {
             idxCond = RexUtils.buildSortedIndexConditions(
                     cluster,
@@ -75,7 +73,7 @@ public class IgniteLogicalIndexScan extends AbstractIndexScan {
                     tbl.getRowType(typeFactory),
                     requiredColumns);
         }
-
+        
         return new IgniteLogicalIndexScan(
                 cluster,
                 traits,
@@ -86,7 +84,7 @@ public class IgniteLogicalIndexScan extends AbstractIndexScan {
                 idxCond,
                 requiredColumns);
     }
-
+    
     /**
      * Creates a TableScan.
      *
@@ -109,6 +107,6 @@ public class IgniteLogicalIndexScan extends AbstractIndexScan {
             @Nullable IndexConditions idxCond,
             @Nullable ImmutableBitSet requiredCols
     ) {
-        super(cluster, traits, ImmutableList.of(), tbl, idxName, proj, cond, idxCond, requiredCols);
+        super(cluster, traits, List.of(), tbl, idxName, proj, cond, idxCond, requiredCols);
     }
 }
