@@ -17,7 +17,6 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel.set;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelTraitSet;
@@ -36,8 +35,7 @@ import org.apache.ignite.internal.processors.query.calcite.rel.IgniteRelVisitor;
  */
 public class IgniteReduceMinus extends IgniteMinus implements IgniteReduceSetOp {
     /**
-     * Constructor.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
      */
     public IgniteReduceMinus(
             RelOptCluster cluster,
@@ -46,14 +44,13 @@ public class IgniteReduceMinus extends IgniteMinus implements IgniteReduceSetOp 
             boolean all,
             RelDataType rowType
     ) {
-        super(cluster, traitSet, ImmutableList.of(input), all);
-
+        super(cluster, traitSet, List.of(input), all);
+        
         this.rowType = rowType;
     }
-
+    
     /**
-     * Constructor.
-     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
      */
     public IgniteReduceMinus(RelInput input) {
         this(
@@ -64,34 +61,34 @@ public class IgniteReduceMinus extends IgniteMinus implements IgniteReduceSetOp 
                 input.getRowType("rowType")
         );
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public RelWriter explainTerms(RelWriter pw) {
         super.explainTerms(pw)
                 .itemIf("rowType", rowType, pw.getDetailLevel() == SqlExplainLevel.ALL_ATTRIBUTES);
-
+        
         return pw;
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public SetOp copy(RelTraitSet traitSet, List<RelNode> inputs, boolean all) {
         return new IgniteReduceMinus(getCluster(), traitSet, sole(inputs), all, rowType);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public IgniteReduceMinus clone(RelOptCluster cluster, List<IgniteRel> inputs) {
         return new IgniteReduceMinus(cluster, getTraitSet(), sole(inputs), all, rowType);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public <T> T accept(IgniteRelVisitor<T> visitor) {
         return visitor.visit(this);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public int aggregateFieldsCount() {
