@@ -17,7 +17,6 @@
 
 package org.apache.ignite.internal.processors.query.calcite.sql;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.apache.calcite.sql.SqlCall;
 import org.apache.calcite.sql.SqlKind;
@@ -35,43 +34,46 @@ import org.jetbrains.annotations.NotNull;
 
 /** An AST node representing option to create table with. */
 public class IgniteSqlCreateTableOption extends SqlCall {
+    /**
+     *
+     */
     private static final SqlOperator OPERATOR =
             new SqlSpecialOperator("TableOption", SqlKind.OTHER);
-
+    
     /** Option key. */
     private final SqlLiteral key;
-
+    
     /** Option value. */
     private final SqlNode value;
-
+    
     /** Creates IgniteSqlCreateTableOption. */
     public IgniteSqlCreateTableOption(SqlLiteral key, SqlNode value, SqlParserPos pos) {
         super(pos);
-
+        
         this.key = key;
         this.value = value;
     }
-
+    
     /** {@inheritDoc} */
     @NotNull
     @Override
     public SqlOperator getOperator() {
         return OPERATOR;
     }
-
+    
     /** {@inheritDoc} */
     @NotNull
     @Override
     public List<SqlNode> getOperandList() {
-        return ImmutableList.of(key, value);
+        return List.of(key, value);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public SqlNode clone(SqlParserPos pos) {
         return new IgniteSqlCreateTableOption(key, value, pos);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public void unparse(SqlWriter writer, int leftPrec, int rightPrec) {
@@ -79,43 +81,43 @@ public class IgniteSqlCreateTableOption extends SqlCall {
         writer.keyword("=");
         value.unparse(writer, leftPrec, rightPrec);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public void validate(SqlValidator validator, SqlValidatorScope scope) {
         throw new UnsupportedOperationException();
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public <R> R accept(SqlVisitor<R> visitor) {
         throw new UnsupportedOperationException();
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public boolean equalsDeep(SqlNode node, Litmus litmus) {
         if (!(node instanceof IgniteSqlCreateTableOption)) {
             return litmus.fail("{} != {}", this, node);
         }
-
+        
         IgniteSqlCreateTableOption that = (IgniteSqlCreateTableOption) node;
         if (key != that.key) {
             return litmus.fail("{} != {}", this, node);
         }
-
+        
         return value.equalsDeep(that.value, litmus);
     }
-
+    
     /**
-     * Get option's key.
+     * @return Option's key.
      */
     public IgniteSqlCreateTableOptionEnum key() {
         return key.getValueAs(IgniteSqlCreateTableOptionEnum.class);
     }
-
+    
     /**
-     * Get option's value.
+     * @return Option's value.
      */
     public SqlNode value() {
         return value;
