@@ -27,10 +27,10 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -89,26 +89,23 @@ public class PlannerTest extends AbstractPlannerTest {
      *
      */
     private static List<String> NODES;
-
-    /**
-     *
-     */
+    
     @BeforeAll
     public static void init() {
         NODES = new ArrayList<>(4);
-
+    
         for (int i = 0; i < 4; i++) {
             NODES.add(UUID.randomUUID().toString());
         }
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testLogicalPlan() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -116,7 +113,7 @@ public class PlannerTest extends AbstractPlannerTest {
                         .add("PROJECTID", f.createJavaType(Integer.class))
                         .build()) {
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -124,26 +121,26 @@ public class PlannerTest extends AbstractPlannerTest {
                         .add("VER", f.createJavaType(Integer.class))
                         .build()) {
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.projectId = p.id0 + 1"
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 ConventionTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -155,36 +152,36 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(qry);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
         }
-
+        
         assertNotNull(relRoot.rel);
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testLogicalPlanDefaultSchema() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -192,7 +189,7 @@ public class PlannerTest extends AbstractPlannerTest {
                         .add("PROJECTID", f.createJavaType(Integer.class))
                         .build()) {
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -200,26 +197,26 @@ public class PlannerTest extends AbstractPlannerTest {
                         .add("VER", f.createJavaType(Integer.class))
                         .build()) {
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM Project pp"
                 + ") p "
                 + "ON d.projectId = p.id0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 ConventionTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -231,36 +228,36 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(qry);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
         }
-
+        
         assertNotNull(relRoot.rel);
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testCorrelatedQuery() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -268,7 +265,7 @@ public class PlannerTest extends AbstractPlannerTest {
                         .add("PROJECTID", f.createJavaType(Integer.class))
                         .build()) {
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -276,21 +273,22 @@ public class PlannerTest extends AbstractPlannerTest {
                         .add("VER", f.createJavaType(Integer.class))
                         .build()) {
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
-        String sql = "SELECT d.id, (SELECT p.name FROM Project p WHERE p.id = d.id) name, d.projectId FROM Developer d";
-
+        
+        String sql = "SELECT d.id, (SELECT p.name FROM Project p WHERE p.id = d.id) name, d.projectId "
+                + "FROM Developer d";
+        
         RelTraitDef<?>[] traitDefs = {
                 ConventionTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -302,36 +300,36 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(qry);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
         }
-
+        
         assertNotNull(relRoot.rel);
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testHepPlaner() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -342,7 +340,7 @@ public class PlannerTest extends AbstractPlannerTest {
             public IgniteIndex getIndex(String idxName) {
                 return new IgniteIndex(null, null, null);
             }
-
+            
             @Override
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
@@ -353,13 +351,13 @@ public class PlannerTest extends AbstractPlannerTest {
                         select(NODES, 1, 2)
                 ));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Developer", "hash");
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -370,7 +368,7 @@ public class PlannerTest extends AbstractPlannerTest {
             public IgniteIndex getIndex(String idxName) {
                 return new IgniteIndex(null, null, null);
             }
-
+            
             @Override
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forAssignments(Arrays.asList(
@@ -381,32 +379,32 @@ public class PlannerTest extends AbstractPlannerTest {
                         select(NODES, 1, 2)
                 ));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.projectId = p.id0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 ConventionTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -418,43 +416,43 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(qry);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             // Transformation chain
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             relRoot = relRoot.withRel(rel).withKind(sqlNode.getKind());
         }
-
+        
         assertNotNull(relRoot.rel);
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testVolcanoPlanerDistributed() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -466,7 +464,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 return IgniteDistributions.affinity(0, "Developer", "hash");
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -478,15 +476,15 @@ public class PlannerTest extends AbstractPlannerTest {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d "
                 + "JOIN ("
@@ -494,7 +492,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 + "   FROM PUBLIC.Project pp"
                 + ") p ON d.projectId = p.id0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 DistributionTraitDef.INSTANCE,
                 ConventionTraitDef.INSTANCE,
@@ -502,7 +500,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -514,50 +512,50 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(qry);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             // Transformation chain
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .simplify();
-
+            
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             relRoot = relRoot.withRel(rel).withKind(sqlNode.getKind());
         }
-
+        
         assertNotNull(relRoot.rel);
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testSplitterColocatedPartitionedPartitioned() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -574,13 +572,13 @@ public class PlannerTest extends AbstractPlannerTest {
                         select(NODES, 1, 2)
                 ));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Developer", "hash");
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -596,27 +594,27 @@ public class PlannerTest extends AbstractPlannerTest {
                         select(NODES, 0, 1),
                         select(NODES, 1, 2)));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.id = p.id0";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 ConventionTraitDef.INSTANCE,
                 DistributionTraitDef.INSTANCE,
@@ -624,7 +622,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -636,63 +634,63 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         assertNotNull(ctx);
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(planner);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             // Transformation chain
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .simplify();
-
+            
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             relRoot = relRoot.withRel(rel).withKind(sqlNode.getKind());
         }
-
+        
         assertNotNull(relRoot);
-
+        
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
                 new Splitter().go((IgniteRel) relRoot.rel)), null);
-
+        
         assertNotNull(plan);
-
+        
         plan.init(ctx);
-
+        
         assertNotNull(plan);
-
+        
         assertEquals(2, plan.fragments().size());
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testSplitterColocatedReplicatedReplicated() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -703,13 +701,13 @@ public class PlannerTest extends AbstractPlannerTest {
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0, 1, 2, 3));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -720,28 +718,28 @@ public class PlannerTest extends AbstractPlannerTest {
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0, 1, 2, 3));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, (d.id + 1) as id2, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.id = p.id0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 DistributionTraitDef.INSTANCE,
                 ConventionTraitDef.INSTANCE,
@@ -749,7 +747,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -761,61 +759,61 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(planner);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             // Transformation chain
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .simplify();
-
+            
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             relRoot = relRoot.withRel(rel).withKind(sqlNode.getKind());
         }
-
+        
         assertNotNull(relRoot);
-
+        
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
                 new Splitter().go((IgniteRel) relRoot.rel)), null);
-
+        
         assertNotNull(plan);
-
+        
         plan.init(ctx);
-
+        
         assertNotNull(plan);
-
+        
         assertEquals(1, plan.fragments().size());
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testSplitterPartiallyColocatedReplicatedAndPartitioned() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -826,13 +824,13 @@ public class PlannerTest extends AbstractPlannerTest {
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -848,28 +846,28 @@ public class PlannerTest extends AbstractPlannerTest {
                         select(NODES, 0, 1)
                 ));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.id = p.id0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 DistributionTraitDef.INSTANCE,
                 ConventionTraitDef.INSTANCE,
@@ -877,7 +875,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -889,59 +887,59 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(planner);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             // Transformation chain
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .simplify();
-
+            
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             relRoot = relRoot.withRel(rel).withKind(sqlNode.getKind());
         }
-
+        
         assertNotNull(relRoot);
-
+        
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
                 new Splitter().go((IgniteRel) relRoot.rel)), null);
-
+        
         assertNotNull(plan);
-
+        
         plan.init(ctx);
-
+        
         assertEquals(3, plan.fragments().size());
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testSplitterPartiallyColocated1() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -952,13 +950,13 @@ public class PlannerTest extends AbstractPlannerTest {
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 1, 2, 3));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -973,28 +971,28 @@ public class PlannerTest extends AbstractPlannerTest {
                         select(NODES, 2)
                 ));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.projectId = p.id0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 DistributionTraitDef.INSTANCE,
                 ConventionTraitDef.INSTANCE,
@@ -1002,7 +1000,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -1014,61 +1012,61 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(planner);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             // Transformation chain
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .simplify();
-
+            
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             relRoot = relRoot.withRel(rel).withKind(sqlNode.getKind());
         }
-
+        
         assertNotNull(relRoot);
-
+        
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
                 new Splitter().go((IgniteRel) relRoot.rel)), null);
-
+        
         assertNotNull(plan);
-
+        
         plan.init(ctx);
-
+        
         assertNotNull(plan);
-
+        
         assertEquals(3, plan.fragments().size());
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testSplitterPartiallyColocated2() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -1079,13 +1077,13 @@ public class PlannerTest extends AbstractPlannerTest {
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -1100,28 +1098,28 @@ public class PlannerTest extends AbstractPlannerTest {
                         select(NODES, 3)
                 ));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.projectId = p.id0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 DistributionTraitDef.INSTANCE,
                 ConventionTraitDef.INSTANCE,
@@ -1129,7 +1127,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -1141,59 +1139,59 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(planner);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             // Transformation chain
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .simplify();
-
+            
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             relRoot = relRoot.withRel(rel).withKind(sqlNode.getKind());
         }
-
+        
         assertNotNull(relRoot);
-
+        
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
                 new Splitter().go((IgniteRel) relRoot.rel)), null);
-
+        
         assertNotNull(plan);
-
+        
         plan.init(ctx);
-
+        
         assertEquals(3, plan.fragments().size());
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testSplitterNonColocated() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -1204,13 +1202,13 @@ public class PlannerTest extends AbstractPlannerTest {
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 2));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -1221,28 +1219,28 @@ public class PlannerTest extends AbstractPlannerTest {
             public ColocationGroup colocationGroup(PlanningContext ctx) {
                 return ColocationGroup.forNodes(select(NODES, 0, 1));
             }
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.projectId = p.ver0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 DistributionTraitDef.INSTANCE,
                 ConventionTraitDef.INSTANCE,
@@ -1250,7 +1248,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -1262,63 +1260,63 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
-            planner.setDisabledRules(ImmutableSet.of("CorrelatedNestedLoopJoin"));
-
+            planner.setDisabledRules(Set.of("CorrelatedNestedLoopJoin"));
+            
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(planner);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             // Transformation chain
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .simplify();
-
+            
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             relRoot = relRoot.withRel(rel).withKind(sqlNode.getKind());
         }
-
+        
         assertNotNull(relRoot);
-
+        
         MultiStepPlan plan = new MultiStepQueryPlan(new QueryTemplate(this::intermediateMapping,
                 new Splitter().go((IgniteRel) relRoot.rel)), null);
-
+        
         assertNotNull(plan);
-
+        
         plan.init(ctx);
-
+        
         assertNotNull(plan);
-
+        
         assertEquals(2, plan.fragments().size());
     }
-
+    
     /**
      *
      */
     @Test
     public void testSerializationDeserialization() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable developer = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -1330,7 +1328,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 return IgniteDistributions.affinity(0, "Developer", "hash");
             }
         };
-
+        
         TestTable project = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -1342,22 +1340,22 @@ public class PlannerTest extends AbstractPlannerTest {
                 return IgniteDistributions.affinity(0, "Project", "hash");
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("DEVELOPER", developer);
         publicSchema.addTable("PROJECT", project);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT d.id, d.name, d.projectId, p.id0, p.ver0 "
                 + "FROM PUBLIC.Developer d JOIN ("
                 + "SELECT pp.id as id0, pp.ver as ver0 FROM PUBLIC.Project pp"
                 + ") p "
                 + "ON d.projectId = p.id0 "
                 + "WHERE (d.projectId + 1) > ?";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 DistributionTraitDef.INSTANCE,
                 ConventionTraitDef.INSTANCE,
@@ -1365,7 +1363,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -1377,47 +1375,47 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelNode rel;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(qry);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             rel = planner.rel(sqlNode).rel;
-
+            
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             // Transformation chain
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .simplify();
-
+            
             rel = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
         }
-
+        
         assertNotNull(rel);
-
+        
         List<Fragment> fragments = new Splitter().go((IgniteRel) rel);
         List<String> serialized = new ArrayList<>(fragments.size());
-
+    
         for (Fragment fragment : fragments) {
             serialized.add(toJson(fragment.root()));
         }
-
+        
         assertNotNull(serialized);
-
+        
         ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -1429,26 +1427,26 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         List<RelNode> nodes = new ArrayList<>();
-
+        
         try (IgnitePlanner ignored = ctx.planner()) {
             for (String s : serialized) {
                 RelJsonReader reader = new RelJsonReader(ctx.cluster(), ctx.catalogReader());
                 nodes.add(reader.read(s));
             }
         }
-
+        
         assertNotNull(nodes);
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testMergeFilters() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable testTbl = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -1459,20 +1457,20 @@ public class PlannerTest extends AbstractPlannerTest {
                 return IgniteDistributions.single();
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("TEST", testTbl);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "SELECT val from (\n"
                 + "   SELECT * \n"
                 + "   FROM TEST \n"
                 + "   WHERE VAL = 10) \n"
                 + "WHERE VAL = 10";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 ConventionTraitDef.INSTANCE,
                 DistributionTraitDef.INSTANCE,
@@ -1480,7 +1478,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -1492,40 +1490,40 @@ public class PlannerTest extends AbstractPlannerTest {
                 .query(sql)
                 .parameters(2)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(qry);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             // Transformation chain
             rel = planner.transform(PlannerPhase.HEURISTIC_OPTIMIZATION, rel.getTraitSet(), rel);
-
+            
             RelTraitSet desired = rel.getCluster()
                     .traitSetOf(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single());
-
+            
             RelNode phys = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             assertNotNull(phys);
-
+            
             AtomicInteger filterCnt = new AtomicInteger();
-
+            
             // Counts filters af the plan.
             phys.childrenAccept(
                     new RelVisitor() {
@@ -1534,12 +1532,12 @@ public class PlannerTest extends AbstractPlannerTest {
                             if (node instanceof IgniteFilter) {
                                 filterCnt.incrementAndGet();
                             }
-
+                            
                             super.visit(node, ordinal, parent);
                         }
                     }
             );
-
+            
             // Checks that two filter merged into one filter.
             // Expected plan:
             // IgniteProject(VAL=[$1])
@@ -1549,51 +1547,51 @@ public class PlannerTest extends AbstractPlannerTest {
             assertEquals(0, filterCnt.get());
         }
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testJoinPushExpressionRule() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable emp = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
                         .add("NAME", f.createJavaType(String.class))
                         .add("DEPTNO", f.createJavaType(Integer.class))
                         .build()) {
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         TestTable dept = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("DEPTNO", f.createJavaType(Integer.class))
                         .add("NAME", f.createJavaType(String.class))
                         .build()) {
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("EMP", emp);
         publicSchema.addTable("DEPT", dept);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "select d.deptno, e.deptno "
                 + "from dept d, emp e "
                 + "where d.deptno + e.deptno = 2";
-
+        
         RelTraitDef<?>[] traitDefs = {
                 DistributionTraitDef.INSTANCE,
                 ConventionTraitDef.INSTANCE,
@@ -1601,7 +1599,7 @@ public class PlannerTest extends AbstractPlannerTest {
                 RewindabilityTraitDef.INSTANCE,
                 CorrelationTraitDef.INSTANCE
         };
-
+        
         PlanningContext ctx = PlanningContext.builder()
                 .localNodeId(first(NODES))
                 .originatingNodeId(first(NODES))
@@ -1613,27 +1611,27 @@ public class PlannerTest extends AbstractPlannerTest {
                         .build())
                 .query(sql)
                 .build();
-
+        
         RelRoot relRoot;
-
+        
         try (IgnitePlanner planner = ctx.planner()) {
             assertNotNull(planner);
-
+            
             String qry = ctx.query();
-
+            
             assertNotNull(qry);
-
+            
             // Parse
             SqlNode sqlNode = planner.parse(qry);
-
+            
             // Validate
             sqlNode = planner.validate(sqlNode);
-
+            
             // Convert to Relational operators graph
             relRoot = planner.rel(sqlNode);
-
+            
             RelNode rel = relRoot.rel;
-
+            
             assertNotNull(rel);
             assertEquals("LogicalFilter(condition=[=(CAST(+($0, $1)):INTEGER, 2)])\n"
                             + "  LogicalJoin(condition=[true], joinType=[inner])\n"
@@ -1642,134 +1640,134 @@ public class PlannerTest extends AbstractPlannerTest {
                             + "    LogicalProject(DEPTNO=[$2])\n"
                             + "      IgniteLogicalTableScan(table=[[PUBLIC, EMP]])\n",
                     RelOptUtil.toString(rel));
-
+            
             // Transformation chain
             RelTraitSet desired = rel.getCluster().traitSet()
                     .replace(IgniteConvention.INSTANCE)
                     .replace(IgniteDistributions.single())
                     .replace(CorrelationTrait.UNCORRELATED)
                     .simplify();
-
+            
             IgniteRel phys = planner.transform(PlannerPhase.OPTIMIZATION, desired, rel);
-
+            
             assertNotNull(phys);
             assertEquals(
                     "IgniteCorrelatedNestedLoopJoin(condition=[=(CAST(+($0, $1)):INTEGER, 2)], joinType=[inner], "
                             + "correlationVariables=[[$cor1]])\n"
                             + "  IgniteTableScan(table=[[PUBLIC, DEPT]], requiredColumns=[{0}])\n"
-                            + "  IgniteTableScan(table=[[PUBLIC, EMP]], filters=[=(CAST(+($cor1.DEPTNO, $t0)):INTEGER, 2)], "
-                            + "requiredColumns=[{2}])\n",
+                            + "  IgniteTableScan(table=[[PUBLIC, EMP]],"
+                            + " filters=[=(CAST(+($cor1.DEPTNO, $t0)):INTEGER, 2)], requiredColumns=[{2}])\n",
                     RelOptUtil.toString(phys),
                     "Invalid plan:\n" + RelOptUtil.toString(phys)
             );
-
+            
             checkSplitAndSerialization(phys, publicSchema);
         }
     }
-
+    
     /**
      *
      */
     @Test
     public void testMergeJoin() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable emp = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
                         .add("NAME", f.createJavaType(String.class))
                         .add("DEPTNO", f.createJavaType(Integer.class))
                         .build()) {
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         emp.addIndex(new IgniteIndex(RelCollations.of(ImmutableIntList.of(1, 2)), "emp_idx", emp));
-
+        
         TestTable dept = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("DEPTNO", f.createJavaType(Integer.class))
                         .add("NAME", f.createJavaType(String.class))
                         .build()) {
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         dept.addIndex(new IgniteIndex(RelCollations.of(ImmutableIntList.of(1, 0)), "dep_idx", dept));
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("EMP", emp);
         publicSchema.addTable("DEPT", dept);
-
+        
         SchemaPlus schema = createRootSchema(false)
                 .add("PUBLIC", publicSchema);
-
+        
         String sql = "select * from dept d join emp e on d.deptno = e.deptno and e.name = d.name order by e.name, d.deptno";
-
+        
         IgniteRel phys = physicalPlan(sql, publicSchema);
-
+        
         assertNotNull(phys);
         assertEquals("IgniteMergeJoin(condition=[AND(=($0, $4), =($3, $1))], joinType=[inner], leftCollation=[[0, 1]], "
                         + "rightCollation=[[2, 1]])\n"
                         + "  IgniteIndexScan(table=[[PUBLIC, DEPT]], index=[dep_idx])\n"
                         + "  IgniteIndexScan(table=[[PUBLIC, EMP]], index=[emp_idx])\n",
                 RelOptUtil.toString(phys));
-
+        
         checkSplitAndSerialization(phys, publicSchema);
     }
-
+    
     /**
      *
      */
     @Test
     public void testMergeJoinIsNotAppliedForNonEquiJoin() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable emp = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
                         .add("NAME", f.createJavaType(String.class))
                         .add("DEPTNO", f.createJavaType(Integer.class))
                         .build(), RewindabilityTrait.REWINDABLE, 1000) {
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         emp.addIndex(new IgniteIndex(RelCollations.of(ImmutableIntList.of(1, 2)), "emp_idx", emp));
-
+        
         TestTable dept = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("DEPTNO", f.createJavaType(Integer.class))
                         .add("NAME", f.createJavaType(String.class))
                         .build(), RewindabilityTrait.REWINDABLE, 100) {
-
+            
             @Override
             public IgniteDistribution distribution() {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         dept.addIndex(new IgniteIndex(RelCollations.of(ImmutableIntList.of(1, 0)), "dep_idx", dept));
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("EMP", emp);
         publicSchema.addTable("DEPT", dept);
-
+        
         String sql = "select * from dept d join emp e on d.deptno = e.deptno and e.name >= d.name order by e.name, d.deptno";
-
+        
         RelNode phys = physicalPlan(sql, publicSchema, "CorrelatedNestedLoopJoin");
-
+        
         assertNotNull(phys);
         assertEquals("IgniteSort(sort0=[$3], sort1=[$0], dir0=[ASC], dir1=[ASC])\n"
                         + "  IgniteProject(DEPTNO=[$3], NAME=[$4], ID=[$0], NAME0=[$1], DEPTNO0=[$2])\n"
@@ -1778,14 +1776,14 @@ public class PlannerTest extends AbstractPlannerTest {
                         + "      IgniteIndexScan(table=[[PUBLIC, DEPT]], index=[dep_idx])\n",
                 RelOptUtil.toString(phys));
     }
-
+    
     /**
      * @throws Exception If failed.
      */
     @Test
     public void testLimit() throws Exception {
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         TestTable testTbl = new TestTable(
                 new RelDataTypeFactory.Builder(f)
                         .add("ID", f.createJavaType(Integer.class))
@@ -1796,66 +1794,66 @@ public class PlannerTest extends AbstractPlannerTest {
                 return IgniteDistributions.broadcast();
             }
         };
-
+        
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
-
+        
         publicSchema.addTable("TEST", testTbl);
-
+        
         String sql = "SELECT * FROM TEST OFFSET 10 ROWS FETCH FIRST 10 ROWS ONLY";
-
-        IgniteRel phys0 = physicalPlan(sql, publicSchema);
-
-        assertNotNull(phys0);
-
-        AtomicInteger limit0 = new AtomicInteger();
-        AtomicBoolean sort0 = new AtomicBoolean();
-
-        relTreeVisit(phys0, (node, ordinal, parent) -> {
+    
+        IgniteRel phys = physicalPlan(sql, publicSchema);
+    
+        assertNotNull(phys);
+    
+        AtomicInteger limit = new AtomicInteger();
+        AtomicBoolean sort = new AtomicBoolean();
+    
+        relTreeVisit(phys, (node, ordinal, parent) -> {
                     if (node instanceof IgniteLimit) {
-                        limit0.incrementAndGet();
+                        limit.incrementAndGet();
                     }
-
+                
                     if (node instanceof IgniteSort) {
-                        sort0.set(true);
+                        sort.set(true);
                     }
                 }
         );
-
-        String errMsg0 = "Invalid plan: \n" + RelOptUtil.toString(phys0);
-
-        assertEquals(1, limit0.get(), errMsg0);
-        assertFalse(sort0.get(), errMsg0);
-
-        checkSplitAndSerialization(phys0, publicSchema);
-
+    
+        String errMsg = "Invalid plan: \n" + RelOptUtil.toString(phys);
+    
+        assertEquals(1, limit.get(), errMsg);
+        assertFalse(sort.get(), errMsg);
+    
+        checkSplitAndSerialization(phys, publicSchema);
+        
         sql = "SELECT * FROM TEST ORDER BY ID OFFSET 10 ROWS FETCH FIRST 10 ROWS ONLY";
-
-        IgniteRel phys1 = physicalPlan(sql, publicSchema);
-
-        assertNotNull(phys1);
-
-        AtomicInteger limit1 = new AtomicInteger();
-        AtomicBoolean sort1 = new AtomicBoolean();
-
-        relTreeVisit(phys1, (node, ordinal, parent) -> {
+    
+        phys = physicalPlan(sql, publicSchema);
+    
+        assertNotNull(phys);
+        
+        limit.set(0);
+        sort.set(false);
+    
+        relTreeVisit(phys, (node, ordinal, parent) -> {
                     if (node instanceof IgniteLimit) {
-                        limit1.incrementAndGet();
+                        limit.incrementAndGet();
                     }
-
+                
                     if (node instanceof IgniteSort) {
-                        sort1.set(true);
+                        sort.set(true);
                     }
                 }
         );
-
-        String errMsg1 = "Invalid plan: \n" + RelOptUtil.toString(phys1);
-
-        assertEquals(1, limit1.get(), errMsg1);
-        assertTrue(sort1.get(), errMsg1);
-
-        checkSplitAndSerialization(phys1, publicSchema);
+    
+        errMsg = "Invalid plan: \n" + RelOptUtil.toString(phys);
+    
+        assertEquals(1, limit.get(), errMsg);
+        assertTrue(sort.get(), errMsg);
+    
+        checkSplitAndSerialization(phys, publicSchema);
     }
-
+    
     /**
      *
      */
@@ -1863,7 +1861,7 @@ public class PlannerTest extends AbstractPlannerTest {
     public void testNotStandardFunctions() throws Exception {
         IgniteSchema publicSchema = new IgniteSchema("PUBLIC");
         IgniteTypeFactory f = new IgniteTypeFactory(IgniteTypeSystem.INSTANCE);
-
+        
         publicSchema.addTable(
                 "TEST",
                 new TestTable(
@@ -1871,29 +1869,29 @@ public class PlannerTest extends AbstractPlannerTest {
                                 .add("ID", f.createJavaType(Integer.class))
                                 .add("VAL", f.createJavaType(String.class))
                                 .build()) {
-
+                    
                     @Override
                     public IgniteDistribution distribution() {
                         return IgniteDistributions.affinity(0, "TEST", "hash");
                     }
                 }
         );
-
+        
         String[] queries = {
                 "select REVERSE(val) from TEST", // MYSQL
                 "select TO_DATE(val, 'yyyymmdd') from TEST" // ORACLE
         };
-
+        
         for (String sql : queries) {
             IgniteRel phys = physicalPlan(
                     sql,
                     publicSchema
             );
-
+            
             checkSplitAndSerialization(phys, publicSchema);
         }
     }
-
+    
     /**
      *
      */
