@@ -22,11 +22,11 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import org.apache.ignite.Ignite;
@@ -37,6 +37,9 @@ import org.apache.ignite.configuration.schemas.network.NetworkConfiguration;
 import org.apache.ignite.configuration.schemas.rest.RestConfiguration;
 import org.apache.ignite.configuration.schemas.runner.ClusterConfiguration;
 import org.apache.ignite.configuration.schemas.runner.NodeConfiguration;
+import org.apache.ignite.configuration.schemas.store.DataStorageConfiguration;
+import org.apache.ignite.configuration.schemas.table.ColumnTypeValidator;
+import org.apache.ignite.configuration.schemas.table.TableValidator;
 import org.apache.ignite.configuration.schemas.table.TablesConfiguration;
 import org.apache.ignite.internal.baseline.BaselineManager;
 import org.apache.ignite.internal.configuration.ConfigurationManager;
@@ -46,10 +49,12 @@ import org.apache.ignite.internal.configuration.storage.DistributedConfiguration
 import org.apache.ignite.internal.configuration.storage.LocalConfigurationStorage;
 import org.apache.ignite.internal.manager.IgniteComponent;
 import org.apache.ignite.internal.metastorage.MetaStorageManager;
-import org.apache.ignite.internal.metastorage.server.persistence.RocksDBKeyValueStorage;
+import org.apache.ignite.internal.metastorage.server.persistence.RocksDbKeyValueStorage;
 import org.apache.ignite.internal.processors.query.calcite.QueryProcessor;
 import org.apache.ignite.internal.processors.query.calcite.SqlQueryProcessor;
 import org.apache.ignite.internal.raft.Loza;
+import org.apache.ignite.internal.schema.configuration.ColumnTypeValidatorImpl;
+import org.apache.ignite.internal.schema.configuration.TableValidatorImpl;
 import org.apache.ignite.internal.table.distributed.TableManager;
 import org.apache.ignite.internal.vault.VaultManager;
 import org.apache.ignite.internal.vault.VaultService;
@@ -61,7 +66,6 @@ import org.apache.ignite.lang.NodeStoppingException;
 import org.apache.ignite.network.ClusterLocalConfiguration;
 import org.apache.ignite.network.ClusterService;
 import org.apache.ignite.network.MessageSerializationRegistryImpl;
-import org.apache.ignite.network.StaticNodeFinder;
 import org.apache.ignite.network.scalecube.ScaleCubeClusterServiceFactory;
 import org.apache.ignite.rest.RestModule;
 import org.apache.ignite.table.manager.IgniteTables;
@@ -75,61 +79,61 @@ import org.jetbrains.annotations.Nullable;
 public class IgniteImpl implements Ignite {
     /** The logger. */
     private static final IgniteLogger LOG = IgniteLogger.forClass(IgniteImpl.class);
-
+    
     /**
      * Path to the persistent storage used by the {@link VaultService} component.
      */
     private static final Path VAULT_DB_PATH = Paths.get("vault");
-
+    
     /**
      * Path to the persistent storage used by the {@link MetaStorageManager} component.
      */
     private static final Path METASTORAGE_DB_PATH = Paths.get("metastorage");
-
+    
     /**
      * Path for the partitions persistent storage.
      */
     private static final Path PARTITIONS_STORE_PATH = Paths.get("db");
-
+    
     /** Ignite node name. */
     private final String name;
-
+    
     /** Vault manager. */
     private final VaultManager vaultMgr;
-
+    
     /** Configuration manager that handles node (local) configuration. */
     private final ConfigurationManager nodeCfgMgr;
-
+    
     /** Cluster service (cluster network manager). */
     private final ClusterService clusterSvc;
-
+    
     /** Raft manager. */
     private final Loza raftMgr;
-
+    
     /** Meta storage manager. */
     private final MetaStorageManager metaStorageMgr;
-
+    
     /** Configuration manager that handles cluster (distributed) configuration. */
     private final ConfigurationManager clusterCfgMgr;
-
+    
     /** Baseline manager. */
     private final BaselineManager baselineMgr;
-
+    
     /** Distributed table manager. */
     private final TableManager distributedTblMgr;
-
+    
     /** Query engine. */
     private final SqlQueryProcessor qryEngine;
-
+    
     /** Rest module. */
     private final RestModule restModule;
-
+    
     /** Client handler module. */
     private final ClientHandlerModule clientHandlerModule;
-
+    
     /** Node status. Adds ability to stop currently starting node. */
     private final AtomicReference<Status> status = new AtomicReference<>(Status.STARTING);
-
+    
     /**
      * The Constructor.
      *
@@ -141,11 +145,11 @@ public class IgniteImpl implements Ignite {
             Path workDir
     ) {
         this.name = name;
-
+        
         vaultMgr = createVault(workDir);
-
+        
         nodeCfgMgr = new ConfigurationManager(
-                Arrays.asList(
+                List.of(
                         NetworkConfiguration.KEY,
                         NodeConfiguration.KEY,
                         RestConfiguration.KEY,
@@ -153,65 +157,69 @@ public class IgniteImpl implements Ignite {
                 ),
                 Map.of(),
                 new LocalConfigurationStorage(vaultMgr),
+                List.of(),
                 List.of()
         );
-
+        
         clusterSvc = new ScaleCubeClusterServiceFactory().createClusterService(
                 new ClusterLocalConfiguration(
                         name,
                         new MessageSerializationRegistryImpl()
                 ),
-                nodeCfgMgr,
-                () -> StaticNodeFinder.fromConfiguration(nodeCfgMgr.configurationRegistry()
-                        .getConfiguration(NetworkConfiguration.KEY).value())
+                nodeCfgMgr.configurationRegistry().getConfiguration(NetworkConfiguration.KEY)
         );
-
+        
         raftMgr = new Loza(clusterSvc, workDir);
-
+        
         metaStorageMgr = new MetaStorageManager(
                 vaultMgr,
                 nodeCfgMgr,
                 clusterSvc,
                 raftMgr,
-                new RocksDBKeyValueStorage(workDir.resolve(METASTORAGE_DB_PATH))
+                new RocksDbKeyValueStorage(workDir.resolve(METASTORAGE_DB_PATH))
         );
-
-        // TODO: IGNITE-15414 Schema validation refactoring with configuration validators.
+        
         clusterCfgMgr = new ConfigurationManager(
-                Arrays.asList(
+                List.of(
                         ClusterConfiguration.KEY,
-                        TablesConfiguration.KEY
+                        TablesConfiguration.KEY,
+                        DataStorageConfiguration.KEY
                 ),
-                Map.of(),
+                Map.of(
+                        TableValidator.class, Set.of(TableValidatorImpl.INSTANCE),
+                        ColumnTypeValidator.class, Set.of(ColumnTypeValidatorImpl.INSTANCE)
+                ),
                 new DistributedConfigurationStorage(metaStorageMgr, vaultMgr),
-                Collections.singletonList(ExtendedTableConfigurationSchema.class)
+                Collections.singletonList(ExtendedTableConfigurationSchema.class),
+                List.of()
         );
-
+        
         baselineMgr = new BaselineManager(
                 clusterCfgMgr,
                 metaStorageMgr,
                 clusterSvc
         );
-
+        
         distributedTblMgr = new TableManager(
                 clusterCfgMgr.configurationRegistry().getConfiguration(TablesConfiguration.KEY),
+                clusterCfgMgr.configurationRegistry().getConfiguration(DataStorageConfiguration.KEY),
                 raftMgr,
                 baselineMgr,
                 clusterSvc.topologyService(),
                 metaStorageMgr,
                 getPartitionsStorePath(workDir)
         );
-
+        
         qryEngine = new SqlQueryProcessor(
                 clusterSvc,
                 distributedTblMgr
         );
-
+        
         restModule = new RestModule(nodeCfgMgr, clusterCfgMgr);
-
+        
         clientHandlerModule = new ClientHandlerModule(qryEngine, distributedTblMgr, nodeCfgMgr.configurationRegistry());
     }
-
+    
     /**
      * Starts ignite node.
      *
@@ -232,7 +240,7 @@ public class IgniteImpl implements Ignite {
      */
     public void start(@Nullable String cfg) {
         List<IgniteComponent> startedComponents = new ArrayList<>();
-
+        
         try {
             // Vault startup.
             doStartComponent(
@@ -240,15 +248,15 @@ public class IgniteImpl implements Ignite {
                     startedComponents,
                     vaultMgr
             );
-
+            
             vaultMgr.putName(name).join();
-
+            
             // Node configuration manager startup.
             doStartComponent(
                     name,
                     startedComponents,
                     nodeCfgMgr);
-
+            
             // Node configuration manager bootstrap.
             if (cfg != null) {
                 try {
@@ -260,7 +268,7 @@ public class IgniteImpl implements Ignite {
             } else {
                 nodeCfgMgr.configurationRegistry().initializeDefaults();
             }
-
+            
             // Start the remaining components.
             List<IgniteComponent> otherComponents = List.of(
                     clusterSvc,
@@ -273,99 +281,109 @@ public class IgniteImpl implements Ignite {
                     restModule,
                     clientHandlerModule
             );
-
+    
             for (IgniteComponent component : otherComponents) {
                 doStartComponent(name, startedComponents, component);
             }
-
+            
             // Deploy all registered watches because all components are ready and have registered their listeners.
             metaStorageMgr.deployWatches();
-
+    
             if (!status.compareAndSet(Status.STARTING, Status.STARTED)) {
                 throw new NodeStoppingException();
             }
         } catch (Exception e) {
             String errMsg = "Unable to start node=[" + name + "].";
-
+            
             LOG.error(errMsg, e);
-
+            
             doStopNode(startedComponents);
-
+            
             throw new IgniteException(errMsg, e);
         }
     }
-
+    
     /**
      * Stops ignite node.
      */
     public void stop() {
         AtomicBoolean explicitStop = new AtomicBoolean();
-
+        
         status.getAndUpdate(status -> {
             if (status == Status.STARTED) {
                 explicitStop.set(true);
             } else {
                 explicitStop.set(false);
             }
-
+            
             return Status.STOPPING;
         });
-
+        
         if (explicitStop.get()) {
             doStopNode(List.of(vaultMgr, nodeCfgMgr, clusterSvc, raftMgr, metaStorageMgr, clusterCfgMgr, baselineMgr,
                     distributedTblMgr, qryEngine, restModule, clientHandlerModule));
         }
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public IgniteTables tables() {
         return distributedTblMgr;
     }
-
+    
     public QueryProcessor queryEngine() {
         return qryEngine;
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public IgniteTransactions transactions() {
         return null;
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public void close() {
         IgnitionManager.stop(name);
     }
-
+    
     /** {@inheritDoc} */
     @Override
     public String name() {
         return name;
     }
-
+    
+    /** {@inheritDoc} */
+    @Override
+    public void setBaseline(Set<String> baselineNodes) {
+        try {
+            distributedTblMgr.setBaseline(baselineNodes);
+        } catch (NodeStoppingException e) {
+            throw new IgniteException(e);
+        }
+    }
+    
     /**
      * @return Node configuration.
      */
     public ConfigurationRegistry nodeConfiguration() {
         return nodeCfgMgr.configurationRegistry();
     }
-
+    
     /**
      * @return Cluster configuration.
      */
     public ConfigurationRegistry clusterConfiguration() {
         return clusterCfgMgr.configurationRegistry();
     }
-
+    
     /**
      * @return Client handler module.
      */
     public ClientHandlerModule clientHandlerModule() {
         return clientHandlerModule;
     }
-
+    
     /**
      * Checks node status. If it's {@link Status#STOPPING} then prevents further starting and throws NodeStoppingException that will lead to
      * stopping already started components later on, otherwise starts component and add it to started components list.
@@ -385,11 +403,11 @@ public class IgniteImpl implements Ignite {
             throw new NodeStoppingException("Node=[" + nodeName + "] was stopped.");
         } else {
             startedComponents.add(component);
-
+    
             component.start();
         }
     }
-
+    
     /**
      * Calls {@link IgniteComponent#beforeNodeStop()} and then {@link IgniteComponent#stop()} for all components in start-reverse-order.
      * Cleanups node started components map and node status map.
@@ -399,10 +417,10 @@ public class IgniteImpl implements Ignite {
     private void doStopNode(@NotNull List<IgniteComponent> startedComponents) {
         ListIterator<IgniteComponent> beforeStopIter =
                 startedComponents.listIterator(startedComponents.size());
-
+        
         while (beforeStopIter.hasPrevious()) {
             IgniteComponent componentToExecBeforeNodeStop = beforeStopIter.previous();
-
+            
             try {
                 componentToExecBeforeNodeStop.beforeNodeStop();
             } catch (Exception e) {
@@ -410,13 +428,13 @@ public class IgniteImpl implements Ignite {
                         + componentToExecBeforeNodeStop + "] within node=[" + name + ']', e);
             }
         }
-
+        
         ListIterator<IgniteComponent> stopIter =
                 startedComponents.listIterator(startedComponents.size());
-
+        
         while (stopIter.hasPrevious()) {
             IgniteComponent componentToStop = stopIter.previous();
-
+            
             try {
                 componentToStop.stop();
             } catch (Exception e) {
@@ -424,22 +442,22 @@ public class IgniteImpl implements Ignite {
             }
         }
     }
-
+    
     /**
      * Starts the Vault component.
      */
     private static VaultManager createVault(Path workDir) {
         Path vaultPath = workDir.resolve(VAULT_DB_PATH);
-
+        
         try {
             Files.createDirectories(vaultPath);
         } catch (IOException e) {
             throw new IgniteInternalException(e);
         }
-
+        
         return new VaultManager(new PersistentVaultService(vaultPath));
     }
-
+    
     /**
      * Returns a path to the partitions store directory. Creates a directory if it doesn't exist.
      *
@@ -449,16 +467,16 @@ public class IgniteImpl implements Ignite {
     @NotNull
     private static Path getPartitionsStorePath(Path workDir) {
         Path partitionsStore = workDir.resolve(PARTITIONS_STORE_PATH);
-
+        
         try {
             Files.createDirectories(partitionsStore);
         } catch (IOException e) {
             throw new IgniteInternalException("Failed to create directory for partitions storage: " + e.getMessage(), e);
         }
-
+        
         return partitionsStore;
     }
-
+    
     /**
      * Node state.
      */
@@ -467,12 +485,12 @@ public class IgniteImpl implements Ignite {
          *
          */
         STARTING,
-
+        
         /**
          *
          */
         STARTED,
-
+        
         /**
          *
          */
